--- a/ok/bc/bc00.1-0.2.1.0.0.md
+++ b/ok/bc/bc00.1-0.2.1.0.0.md
@@ -2,7 +2,7 @@
 
 药性就是把药物治病的多种多样的性质和作用加以概括的统称，它主要包适性、味、升降浮沉、归经等内容。
 
-（一）性：即寒、热、温、凉气也。这四种药性，古时称“四气”。其中温热与寒凉属于两类不同的性质，而温与热，寒与凉，仅仅是程度上差异。药物的寒、热、温、凉四性．是古人在临床实践中根据药物作用于人体所发生的反应和治病效果而作出的归纳，如石膏、知母等对发热、烦渴等热证有清热泻火作用，就表明这两种药是寒性的；反之，用干姜、附子等治疗腹中冷痛的寒证有温中散寒的作用，就表明这些药是热性的。一般来说，能减轻或消除热证的药物，是属于寒性或凉性；能减轻或消除寒证的药物，属于温性或热性，即药性与所治疾病的寒热之性是相对的。正如《神农本草经》云：疗寒以热药，疗热以寒药。又《素问·至真要大论》曰：寒者热之，热者寒之。这就是用药的基本规律之一。
+（一）性：即寒、热、温、凉气也。这四种药性，古时称“四气”。其中温热与寒凉属于两类不同的性质，而温与热，寒与凉，仅仅是程度上差异。药物的寒、热、温、凉四性,是古人在临床实践中根据药物作用于人体所发生的反应和治病效果而作出的归纳，如石膏、知母等对发热、烦渴等热证有清热泻火作用，就表明这两种药是寒性的；反之，用干姜、附子等治疗腹中冷痛的寒证有温中散寒的作用，就表明这些药是热性的。一般来说，能减轻或消除热证的药物，是属于寒性或凉性；能减轻或消除寒证的药物，属于温性或热性，即药性与所治疾病的寒热之性是相对的。正如《神农本草经》云：疗寒以热药，疗热以寒药。又《素问·至真要大论》曰：寒者热之，热者寒之。这就是用药的基本规律之一。
 
 此外，还有一些寒热偏胜之性不显著，作用比较和缓的药物，常称之为平性，实际上没有绝对的平性，总有偏温偏凉的区别，所以一般仍称四气。
 
@@ -10,7 +10,7 @@
 
 酸味有收敛．固涩作用。多用于虚汗、泄泻、遗精、带下等证，如五味子、山茱萸涩精止汗，诃子、五倍子涩肠止泻。
 
-苦味有泄和燥的作用。泄又分通泄、清泄、降泄，如大黄苦寒，通便泄热，杏仁苦温，降气平喘，栀子苦寒，清热泻火。燥即燥湿，可用于湿证．但湿证又有寒湿、湿热的不同，如苍术、厚朴之苦温以祛寒湿，黄连、黄芩之苦寒，以清热燥湿。此外，苦味还有坚阴的作用，即泻火存阴之义，如黄柏、知母泻相火而存阴液，以治肾阴虚亏的相火亢盛之证。
+苦味有泄和燥的作用。泄又分通泄、清泄、降泄，如大黄苦寒，通便泄热;杏仁苦温，降气平喘，栀子苦寒，清热泻火。燥即燥湿，可用于湿证。但湿证又有寒湿、湿热的不同，如苍术、厚朴之苦温以祛寒湿，黄连、黄芩之苦寒，以清热燥湿。此外，苦味还有坚阴的作用，即泻火存阴之义，如黄柏、知母泻相火而存阴液，以治肾阴虚亏的相火亢盛之证。
 
 甘味有补益、和中、缓急的作用。多用于虚证或拘急疼痛等病证。如味甘的人参补气，熟地补血，甘草、蜂蜜和中、缓急止痛等。
 
@@ -18,21 +18,21 @@
 
 咸味有泻下、软坚散结的作用。多用于瘰疬、痰核及热结便秘等证，如味咸的海藻、昆布能软坚散结，芒硝泻下通便等。
 
-除上述五味外，还有淡和涩味。淡有渗湿利尿的作用，如茯苓、泽泻既能渗湿又能利尿，多用于水肿、小便不利等病证。涩味与酸味作用相似。一般将淡附于甘，涩归于酸，故习惯只称五味。
+除上述五味外，还有淡和涩味。淡味有渗湿利尿的作用，如茯苓、泽泻既能渗湿又能利尿，多用于水肿、小便不利等病证。涩味与酸味作用相似。一般将淡附于甘，涩归于酸，故习惯只称五味。
 
 五味中又有阴有阳，《素问·至真要大论》曰：辛甘发散为阳，酸苦涌泄为阴，咸味涌泄为阴，淡味渗泄为阳。可见五味之中，辛、甘、淡属阳，酸、苦、咸属阴。
 
-气与味是药物性能的主要两个方面。它们之间有着不可分割的密切关系，每一种药物都具有性和味，因而两者必须综合起来看·才能比較全面地掌握药性。一般说，气味相同的药物，其主要作用大致相同，如辛温药大都具有发表散寒的用，苦寒药大都具有清热泻火的作用，而气味不同的药物，作用也就不同。同一种药性各有五味的差别，而同一种药味，又有四性的不同，同是温性药，若味不同，作用大有差异，如麻黄辛温，发汗散风寒；黄芪甘温，补中益气。又同是辛味药，若气不同，作用也不一样，有薄荷辛凉发散风热，附子辛热以祛阴寒等。还有一些药物，一性而兼有二种以上的味，而其作用范围相应的扩大，如当归味辛甘，性温。甘能补、辛能行，既能补血又能活血，常用于血虚、血寒瘀滞之证。因此，在辨认药性时，不能把性和味孤立起来看。掌握四气五味，是研究和运用药物的重要关键，指导用药的基础。药物之所以治病，就因为药物有各自的偏性，唐容川说：设人身之气，偏胜偏衰则生疾病，又借药物一气之偏，以调吾身之盛衰而使归于和平则无病矣。又如《内经》云：风淫于内，治以辛凉，佐以苦甘，以甘缓之，以辛散之。正是针对人体的病变，利用药物不同的性能，以调整人体内部机能的偏胜偏衰，使达到生理的平衡为目的。
+气与味是药物性能的主要两个方面。它们之间有着不可分割的密切关系，每一种药物都具有性和味，因而两者必须综合起来看，才能比較全面地掌握药性。一般说，气味相同的药物，其主要作用大致相同，如辛温药大都具有发表散寒的用，苦寒药大都具有清热泻火的作用，而气味不同的药物，作用也就不同。同一种药性各有五味的差别，而同一种药味，又有四性的不同，同是温性药，若味不同，作用大有差异，如麻黄辛温，发汗散风寒；黄芪甘温，补中益气。又同是辛味药，若气不同，作用也不一样，有薄荷辛凉发散风热，附子辛热以祛阴寒等。还有一些药物，一性而兼有二种以上的味，而其作用范围相应的扩大，如当归味辛甘，性温。甘能补、辛能行，既能补血又能活血，常用于血虚、血寒瘀滞之证。因此，在辨认药性时，不能把性和味孤立起来看。掌握四气五味，是研究和运用药物的重要关键，指导用药的基础。药物之所以治病，就因为药物有各自的偏性，唐容川说：设人身之气，偏胜偏衰则生疾病，又借药物一气之偏，以调吾身之盛衰而使归于和平则无病矣。又如《内经》云：风淫于内，治以辛凉，佐以苦甘，以甘缓之，以辛散之。正是针对人体的病变，利用药物不同的性能，以调整人体内部机能的偏胜偏衰，使达到生理的平衡为目的。
 
-（三）升降浮沉：各种疾病，在病机和证候方面，表现出有向上（如呕吐、气喘）、向下（如渴利、脱肛）、向外（如发热、自汗）、向内（表证不解、疹毒内陷）等病势趋向，在治疗时须针对病情选用相应的能改善或消除这些病证的药物。所以中药的作用同疾病表现的趋向相对来说，也有升、降、浮、沉的性质；升是上升，降是下降，浮是发散，沉是泻利。凡升浮的药，都属阳，主上行向外，有升阳、发表、散寒、开窍等作用，沉降的药，都属阴，主下行向内，有降逆清热利水、收敛等作用。升和降，浮和沉都是相对的。
+（三）升降浮沉：各种疾病，在病机和证候方面，表现出有向上（如呕吐、气喘）、向下（如渴利、脱肛）、向外（如发热、自汗）、向内（表证不解、疹毒内陷）等病势趋向，在治疗时须针对病情选用相应的能改善或消除这些病证的药物。所以中药的作用同疾病表现的趋向相对来说，也有升、降、浮、沉的性质；升是上升，降是下降，浮是发散，沉是泻利。凡                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                升浮的药，都属阳，主上行向外，有升阳、发表、散寒、开窍等作用；沉降的药，都属阴，主下行向内，有降逆、清热、利水、收敛等作用。升和降，浮和沉都是相对的。
 
-药物作用的升降浮沉与药物的性味有不可分割的关系。李东垣说：药有升降浮沉化生长收藏成，以配四时，春升夏浮，秋收冬藏，土居中化。是以味薄者升而生，气薄者降而收，气厚者浮而长，味厚者沉而藏，气味平者化而成。就气味来看，凡是味属辛甘，性属温热的一类阳性药物，大多能升浮，味属苦咸，性属寒凉的一类阴性药物，大多是沉降的。故李时珍概括地说,酸咸无升，辛甘无降。寒无浮，热无沉。
+药物作用的升降浮沉与药物的性味有不可分割的关系。李东垣说：药有升降浮沉化生长收藏成，以配四时，春升夏浮，秋收冬藏，土居中化。是以味薄者升而生，气薄者降而收，气厚者浮而长，味厚者沉而藏，气味平者化而成。就气味来看，凡是味属辛甘，性属温热的一类阳性药物，大多能升浮；味属苦咸，性属寒凉的一类阴性药物，大多是沉降的。故李时珍概括地说,酸咸无升，辛甘无降。寒无浮，热无沉。
 
-药物的质地轻重，也是归纳升降浮沉的另一依据。如花叶或质地轻的辛夷、枯梗等大多能升能浮；反之，子实及质重的枳实、磁石之类，大多能沉能降。然而，有些药物例外，如“诸花皆升，旋复独降”。川芎既可“上行头目”,又可“下达血海”。这说明在药物升、降、浮、沉与质地关系的一般共性中，又有其特殊性。
+药物的质地轻重，也是归纳升降浮沉的另一依据。如花叶或质地轻虚的辛夷、枯梗等大多能升能浮；反之，子实及质重的枳实、磁石之类，大多能沉能降。然而，有些药物例外，如“诸花皆升，旋复独降”，川芎既可“上行头目”,又可“下达血海”。这说明在药物升、降、浮、沉与质地关系的一般共性中，又有其特殊性。
 
-此外，药物升降浮沉的性能，还受配伍或炮制的影响。如酒炒则升，姜汁炒则散，醋炒则收敛，水炒则下行。另外，升浮药在配伍大队沉降药中，升浮之性会受到制约;沉降药在配伍大队升浮药中，沉降之性也会受到制约。这都说明药性的升降浮沉，在一定条件下，可以互相转化，而不是一成不变的。正如李时珍所言：升者引之以咸寒，则沉而直达下焦，沉者引之以酒，则浮而上至巅顶。此非窺天地之奥而达造化之权者，不能至此。一物之中有根升梢降，生升熟降，是升降在物，亦在人也。
+此外，药物升降浮沉的性能，还受配伍或炮制的影响。如酒炒则升，姜汁炒则散，醋炒则收敛，盐水炒则下行。另外，升浮药在配伍大队沉降药中，升浮之性会受到制约;沉降药在配伍大队升浮药中，沉降之性也会受到制约。这都说明药性的升降浮沉，在一定条件下，可以互相转化，而不是一成不变的。正如李时珍所言：升者引之以咸寒，则沉而直达下焦，沉者引之以酒，则浮而上至巅顶。此非窺天地之奥而达造化之权者，不能至此。一物之中有根升梢降，生升熟降，是升降在物，亦在人也。
 
-升降浮沉，是临床用药原则之一。因为人休发生病变的部位有上下，表里的不同，病势也有逆上和下陷的差异。掌握药物作用趋向，可以纠正人体功能的失调，使之恢复正常，病势上逆者，宜降不宜升，如肝阳上亢的头痛，用石决明、牡蛎等潜降，病势陷下者，宜升不宜降，如久泻脱肛，用人参、黄芪、升麻、柴胡等益气升阳。或因势利导，有助于驱邪外出。如表证初起，用麻黄、桂枝等发表祛邪；疹出不透，用薄荷、升麻透毒外出等。
+升降浮沉，是临床用药原则之一。因为人休发生病变的部位有上下，表里的不同，病势也有逆上和下陷的差异。掌握药物作用趋向，可以纠正人体功能的失调，使之恢复正常，病势上逆者，宜降不宜升，如肝阳上亢的头痛，用石决明、牡蛎等潜降；病势陷下者，宜升不宜降，如久泻脱肛，用人参、黄芪、升麻、柴胡等益气升阳。或因势利导，有助于驱邪外出。如表证初起，用麻黄、桂枝等发表祛邪；疹出不透，用薄荷、升麻透毒外出等。
 
 （四）归经：药物在人体所起的作用有它一定的范围，如寒性药物，虽都具有清热作用，但有的偏清肺热，有的偏清心热，各有所长。再如同一补药，也有补肺、补脾、补肾之不同。因此，根据中药对机体各部分的治疗作用，进行归纳，使之系统化，就形成了归经理论。所谓归经，就是指药物对人体某部分的选择性作用。也可以说，药物对某经（某脏腑及经络）或某几经发生明显的作用，而对其他经则作用较小，或没作用。
 
