update ok/fjx/fjx07-0.5.0.0.0.md. 第三行"现代用法（；）炼蜜和丸，每丸约重15克”改为冒号。 第四行“补肾（心）要养肝”改为必。

--- a/ok/fjx/fjx07-0.5.0.0.0.md
+++ b/ok/fjx/fjx07-0.5.0.0.0.md
@@ -1,10 +1,10 @@
-## 六味地黄丸原名地黄丸。《小儿药证真诀》
+## 六味地黄丸原名地黄丸《小儿药证真诀》
 
 〔组成〕熟地黄八钱（24克） 山茱萸四钱（12克） 干山药四钱（12克） 泽泻三钱（10克） 茯苓去皮三钱（10克） 丹皮三钱（10克）
 
-〔煎服法〕上为末，炼蜜为丸，如梧桐子大，空心温水化下三丸。（现代用法；炼蜜和丸，每丸约重15克，成年人每服一丸，日三次，空服时服，开水送下，或水煎服。）
+〔煎服法〕上为末，炼蜜为丸，如梧桐子大，空心温水化下三丸。（现代用法：炼蜜和丸，每丸约重15克，成年人每服一丸，日三次，空服时服，开水送下，或水煎服。）
 
-〔服法〕本方作者钱仲阳从《金匮》肾气丸中减去桂、附而成。为治肾阴不足，阴虚火旺的主要方剂，其病以腰痠腿软，头晕目眩，手足心热，舌红少苔，脉沉细数为主要症状。根据《素问》“虚则补之”，“精不足者，补之以味”的治疗原则，治宜用滋补肾阴，壮水制火之法。故方中重用熟地，甘温味厚，滋阴补血，益精填髓为君药。肝肾同源，补肾心要养肝，以防子盗毋气，用山芋肉酸温，补肾养肝血，兼可固肾涩精，可防精血的流失，增强熟地补肝肾，助封藏之功，先天之精，需要后天之充养，故用山药甘平，健脾益精固肾，以上二味均为臣药。君臣药合用以培本为主，尤其着重滋补肾阴。肾为水脏，主气化，由于肾阴亏虚，常导致虚火上炎，而肾浊不降，故配伍泽泻淡渗入肾，宣泄肾浊，以泻助补，并且可以制约熟地的滋腻碍胃之弊；茯苓甘淡入脾，淡渗利湿，助山药益脾。阴血不足则生内热，伏热内扰，复耗阴血，故丹皮清血中之伏热，以防耗伤阴血，并可制约山芋肉之温性，以上三药共为佐药。全方药仅六味，配伍相当精当，前三味为补，三补为治本，后三味为泻三泻为治标，三补配三泻，使本方补而不滞，泻而不伤阴，成为一首通补开合，平补肾阴的良方。
+〔服法〕本方作者钱仲阳从《金匮》肾气丸中减去桂、附而成。为治肾阴不足，阴虚火旺的主要方剂，其病以腰痠腿软，头晕目眩，手足心热，舌红少苔，脉沉细数为主要症状。根据《素问》“虚则补之”，“精不足者，补之以味”的治疗原则，治宜用滋补肾阴，壮水制火之法。故方中重用熟地，甘温味厚，滋阴补血，益精填髓为君药。肝肾同源，补肾必要养肝，以防子盗毋气，用山芋肉酸温，补肾养肝血，兼可固肾涩精，可防精血的流失，增强熟地补肝肾，助封藏之功，先天之精，需要后天之充养，故用山药甘平，健脾益精固肾，以上二味均为臣药。君臣药合用以培本为主，尤其着重滋补肾阴。肾为水脏，主气化，由于肾阴亏虚，常导致虚火上炎，而肾浊不降，故配伍泽泻淡渗入肾，宣泄肾浊，以泻助补，并且可以制约熟地的滋腻碍胃之弊；茯苓甘淡入脾，淡渗利湿，助山药益脾。阴血不足则生内热，伏热内扰，复耗阴血，故丹皮清血中之伏热，以防耗伤阴血，并可制约山芋肉之温性，以上三药共为佐药。全方药仅六味，配伍相当精当，前三味为补，三补为治本，后三味为泻三泻为治标，三补配三泻，使本方补而不滞，泻而不伤阴，成为一首通补开合，平补肾阴的良方。
 
 本方药物多为阴柔滋腻之品，虽能益阴，但用之过多，有碍于脾胃的运化功能，故平素脾胃虚弱者，应当慎用。同时还应注意，使用本方时，一定要按照原书用量比例，方可见效。
 
