--- a/ok/yk/yk0zl07-0.2.2.0.0.md
+++ b/ok/yk/yk0zl07-0.2.2.0.0.md
@@ -58,6 +58,6 @@
 
 （2）泪道冲洗法：是用水液冲洗泪道的方法。它多用来探测泪道是否通畅及清除泪囊中积存的分泌物，适用于冷泪症及漏睛症患者，或作为眼内手术前的常规准备。
 
-方法：用0.5〜1%的卡因溶液点眼二次，或用蘸有的卡因溶液的短棉签，夹在大眦头上下泪点之间，约2〜3分钟后，令患者头向后仰冲洗者以左手食指将下睑往下拉，固定于眶缘部，暴露下泪点。若泪点过小，可先用泪点扩张器扩张之。继而右手持装有5〜10ml生理盐水的注射器，将磨成饨头并弯曲成近直角的4号针头垂直插入下泪点约1〜2mm深，然后内转90°，成水平位，沿泪小管缓慢向鼻侧推进，待进针3〜5mm时，缓缓注入冲洗液。若遇阻力，不可用力强行通过。
+方法：用0.5〜1%的卡因溶液点眼二次，或用蘸有的卡因溶液的短棉签，夹在大眦头上下泪点之间，约2〜3分钟后，令患者头向后仰冲洗者以左手食指将下睑往下拉，固定于眶缘部，暴露下泪点。若泪点过小，可先用泪点扩张器扩张之。继而右手持装有5〜10ml生理盐水的注射器，将磨成钝头并弯曲成近直角的4号针头垂直插入下泪点约1〜2mm深，然后内转90°，成水平位，沿泪小管缓慢向鼻侧推进，待进针3〜5mm时，缓缓注入冲洗液。若遇阻力，不可用力强行通过。
 
 如泪道通畅者，冲洗液可以从泪道流入鼻内，水从同侧鼻孔流出；如泪管道狭窄，冲洗时有一定阻力，大部分冲洗液从上泪点返流，仅少量冲洗液通过，鼻孔流出水液呈滴状；如鼻泪管阻塞，则冲洗时阻力很大，鼻咽部无水，冲洗液主要从上泪点返流；若从泪小点返流出粘液脓性分泌物，则为漏睛症；如鼻咽部无水，冲洗液自原泪点或上泪点射岀，或觉有坚韧的抵抗感，进水阻力很大，则可能为泪小管阻塞。
