--- a/ok/bc/bc02-0.1.1.0.0.md
+++ b/ok/bc/bc02-0.1.1.0.0.md
@@ -1,6 +1,6 @@
 ### 大黄
 
-〔原文〕**大苦大寒。入足太阴，**脾。**手足阳明、厥阴**大肠、胃、心包、肝。**血分。其性浮而不沉，其用走而不守。若酒浸，亦能引至至高之分。**仲景太阴门调胃承气汤，大黄注曰酒浸；阳明门大承气汤，大黄注曰酒洗；少阳阳明小承气汤，大黄不用酒制，皆有分别。东垣曰：邪气在上，非酒不至。 若用生者，则遗至高之邪热，病愈后，或目赤喉痹头痛，膈上热疾生也。**用以荡涤肠胃，下燥结而除瘀热。治伤寒时疾，发热谵语，**大肠有燥粪，故谵语，宜下之。谵，音占。**温热瘴疟**(1)**，下痢赤白，腹痛里急，黄疸水肿，癥瘕积聚**(2)，积久成形谓之积，属阴；聚散无常谓之聚，属阳。积多是血，或食或痰，聚多是气。**留饮**(3)**宿食**(4)**，心腹痞满，二便不通，**皆土郁夺之。 **吐血衄血，血闭血枯，损伤积血，一切实热，血中伏火。行水除痰，蚀脓消肿，能推陈致新，然伤元气而耗阴血。**下多亡阴。**若病在气分，胃虚血弱人禁用。**病在气分而用之，是为诛伐无过。东垣曰：能推陈致新，如定祸乱以致太平，所以有将军之号。时珍曰：仲景泻心汤，治心气不足，吐衄血者，用大黄、黄连、黄芩，乃泻心包、肝、脾、胃四经血中之伏火也。又治心下痞满，按之软者，用大黄黄连泻心汤，亦泻脾胃之湿热，非泻心也。病发于阴而反下之，则瘴满。乃寒伤营血，邪结上焦。胃之上脘当心，故曰泻心。经曰：太阴所至，为痞满。又曰：浊气在上，则生䐜胀是已。病发于阳而反下之，则结胸，乃热邪陷入血分，亦在上脘。故大陷胸汤、丸皆用大黄，亦泻脾胃血分之邪，而降其浊气也。若结胸在气分，只用小陷胸汤；痞满在气分，只用半夏泻心汤。或问心气不足而吐衄，何以不补心而反泻心！丹溪曰：少阴不足，亢阳无辅，致阴血妄行，故用大黄泻其亢甚之火。又心本不足，肝肺各受火邪而病作，故用黄芩救肺，黄连救肝。肺者阴之主，肝者心之母，血之合也。肺肝火退，则血归经而自安矣。寇宗奭曰：以苦泄其热，就以苦补其心，盖一举而两得之。李士材曰：古人用大黄，治虚劳吐衄，意甚深微。盖浊阴不降，则清阳不生，瘀血不去，则新血不生也。**川产锦纹者良。有酒浸酒蒸，生熟之不同，生用更峻。黄芩为使。**欲取通利者，不得骤进谷食，大黄得谷食，便不能通利耳。《夷坚志》：汤火伤者，捣生大黄醋调敷，止痛无瘢。
+〔原文〕**大苦大寒。入足太阴，**<small>脾。</small>**手足阳明、厥阴**<small>大肠、胃、心包、肝。</small>**血分。其性浮而不沉，其用走而不守。若酒浸，亦能引至至高之分。**<small>仲景太阴门调胃承气汤，大黄注曰酒浸；阳明门大承气汤，大黄注曰酒洗；少阳阳明小承气汤，大黄不用酒制，皆有分别。东垣曰：邪气在上，非酒不至。 若用生者，则遗至高之邪热，病愈后，或目赤喉痹头痛，膈上热疾生也。</small>**用以荡涤肠胃，下燥结而除瘀热。治伤寒时疾，发热谵语，**<small>大肠有燥粪，故谵语，宜下之。谵，音占。</small>**温热瘴疟**(1)**，下痢赤白，腹痛里急，黄疸水肿，癥瘕积聚**(2)，<small>积久成形谓之积，属阴；聚散无常谓之聚，属阳。积多是血，或食或痰，聚多是气。</small>**留饮**(3)**宿食**(4)**，心腹痞满，二便不通，**<small>皆土郁夺之。</small>**吐血衄血，血闭血枯，损伤积血，一切实热，血中伏火。行水除痰，蚀脓消肿，能推陈致新，然伤元气而耗阴血。**<small>下多亡阴。</small>**若病在气分，胃虚血弱人禁用。**<small>病在气分而用之，是为诛伐无过。东垣曰：能推陈致新，如定祸乱以致太平，所以有将军之号。时珍曰：仲景泻心汤，治心气不足，吐衄血者，用大黄、黄连、黄芩，乃泻心包、肝、脾、胃四经血中之伏火也。又治心下痞满，按之软者，用大黄黄连泻心汤，亦泻脾胃之湿热，非泻心也。病发于阴而反下之，则瘴满。乃寒伤营血，邪结上焦。胃之上脘当心，故曰泻心。经曰：太阴所至，为痞满。又曰：浊气在上，则生䐜胀是已。病发于阳而反下之，则结胸，乃热邪陷入血分，亦在上脘。故大陷胸汤、丸皆用大黄，亦泻脾胃血分之邪，而降其浊气也。若结胸在气分，只用小陷胸汤；痞满在气分，只用半夏泻心汤。或问心气不足而吐衄，何以不补心而反泻心！丹溪曰：少阴不足，亢阳无辅，致阴血妄行，故用大黄泻其亢甚之火。又心本不足，肝肺各受火邪而病作，故用黄芩救肺，黄连救肝。肺者阴之主，肝者心之母，血之合也。肺肝火退，则血归经而自安矣。寇宗奭曰：以苦泄其热，就以苦补其心，盖一举而两得之。李士材曰：古人用大黄，治虚劳吐衄，意甚深微。盖浊阴不降，则清阳不生，瘀血不去，则新血不生也.</small>**川产锦纹者良。有酒浸酒蒸，生熟之不同，生用更峻。黄芩为使。**<small>欲取通利者，不得骤进谷食，大黄得谷食，便不能通利耳。《夷坚志》：汤火伤者，捣生大黄醋调敷，止痛无瘢。</small>
 
 【讲解】（1）瘴疟：指感受山岚瘴毒而发的一种危重疟疾。（2）癥瘕积聚：癥瘕和积聚，都是腹内积块，或胀或痛的病证。 癥、积是有块状物可扪到，有形而固定不移，痛有定处；瘕、聚无形，聚散无常，推之游移不定，痛无定处。（3）留饮：痰饮的一种。因饮邪日久不化，留而不去，故名。（4）宿食：指饮食停积于肠胃的一种病证。
 
