--- a/ok/bc/bc02-0.1.1.0.0.md
+++ b/ok/bc/bc02-0.1.1.0.0.md
@@ -6,7 +6,7 @@
 
 **大黄以清泻为主要功效。具有泻下攻积，清热泻火，解毒及活血祛瘀作用。**为蓼科多年生草本植物掌叶大黄，唐古特大黄或南大黄的根状茎。掌叶大黄和唐古特大黄，又称北大黄，主产于青海、甘肃等地；南大黄主产于四川、湖北、云南、贵州。
 
-大黄別名众多。如就其性而言，因能推陈出新，有锐不可当之势，古人誉为“将军”。四川南大黄产量较大，为通用之品，故又称川军。从其状而言，断面棕黄红色，有类白色菱形的网状纹理，排列整齐，极似缎面的织锦者，称锦纹大黄，或简称锦纹。此种药材主产于青海，品质优良，奉为道地药材。
+大黄别名众多。如就其性而言，因能推陈出新，有锐不可当之势，古人誉为“将军”。四川南大黄产量较大，为通用之品，故又称川军。从其状而言，断面棕黄红色，有类白色菱形的网状纹理，排列整齐，极似缎面的织锦者，称锦纹大黄，或简称锦纹。此种药材主产于青海，品质优良，奉为道地药材。
 
 本品苦寒沉降。入脾、胃、大肠，心及肝经。力猛善行，能直达下焦，荡涤肠胃积滞，清泻血分实热，并借其入血降泄之力，又有活血逐瘀之功，故为攻积泻火逐瘀之要药。凡大便燥结，积滞泻痢，湿热黄疸，水肿；热病便秘、高热神昏；热毒炽盛的吐血衄血，热毒疮痈，以及血滞经闭，癥瘕积聚，跌打损伤，瘀阻疼痛等证，本品均能治之。然其药性峻烈，易伤正气，如非实证，不可轻用。孕妇或经期、产后、哺乳期均慎用。
 
