--- a/ok/zjz/zjz03-0.7.2.0.0.md
+++ b/ok/zjz/zjz03-0.7.2.0.0.md
@@ -1,3 +1,3 @@
 ### 二、耳与经络脏腑的关系
 
-祖国医学认为，人体虽然分脏腑、九窍、百骸等，但它们都 是有机整体的部分，同时每一个局部又是一个小整体。耳并不 单纯是一个孤立的听觉器官，它和经络、脏腑有着密切关系。《阴阳十一脉灸经》中，提到了与上肢、眼、颊、咽喉相连系的“耳脉”。 《灵枢•经脉》中有六条阳经的经脉循行分别到耳中和耳的周围，到 耳中的有手太阳、阳明经和手足少阳经四条经脉；到耳周围的有 足阳明和足太阳经。六阴经的经脉循行虽然不直接入耳，但其经 別的循行到达颈项附近后，再合入阳经而上行，因此也和耳有一 定的联系。所以《灵枢•邪气脏腑病形》说"十二经脉，三百六十 五络，其血气皆上于面而走空窍。其精阳气上走于自而为睛。其 别气走于耳而为听”。另外《灵枢•经筋》和《奇经八脉考》中也指出 耳与经筋、奇经八脉都有一定的关系。耳不但和经络有关系，并 且通过经络与脏腑也有着密切的关系。《素问•金匮真言论》说：“南方赤色，入通于心，开窍于耳，藏精于心”。《灵枢•脉度》说：肾气通于耳，肾和则耳能闻五音矣”。《难经•四十难》说：“肺主 声，令耳闻声。”《证治准绳》有：“肺气虚则少气•••是以耳聋” 的记载，可见耳与脏腑在生理、病理方面也是息息相关的。
+祖国医学认为，人体虽然分脏腑、九窍、百骸等，但它们都是有机整体的部分，同时每一个局部又是一个小整体。耳并不单纯是一个孤立的听觉器官，它和经络、脏腑有着密切关系。《阴阳十一脉灸经》中，提到了与上肢、眼、颊、咽喉相连系的“耳脉”。 《灵枢•经脉》中有六条阳经的经脉循行分别到耳中和耳的周围，到耳中的有手太阳、阳明经和手足少阳经四条经脉；到耳周围的有足阳明和足太阳经。六阴经的经脉循行虽然不直接入耳，但其经別的循行到达颈项附近后，再合入阳经而上行，因此也和耳有一 定的联系。所以《灵枢•邪气脏腑病形》说"十二经脉，三百六十五络，其血气皆上于面而走空窍。其精阳气上走于目而为睛。其别气走于耳而为听”。另外《灵枢•经筋》和《奇经八脉考》中也指出耳与经筋、奇经八脉都有一定的关系。耳不但和经络有关系，并 且通过经络与脏腑也有着密切的关系。《素问•金匮真言论》说：“南方赤色，入通于心，开窍于耳，藏精于心”。《灵枢•脉度》说：“肾气通于耳，肾和则耳能闻五音矣”。《难经•四十难》说：“肺主声，令耳闻声。”《证治准绳》有：“肺气虚则少气•••是以耳聋” 的记载，可见耳与脏腑在生理、病理方面也是息息相关的。
