--- a/ok/zjz/zjz03-0.7.8.0.0.md
+++ b/ok/zjz/zjz03-0.7.8.0.0.md
@@ -1,11 +1,11 @@
 ### 六、注意事项
 
-1.对初诊患者，在针刺前必须说明耳针疗法的特点，针刺耳 穴后的反应，使患者有充分的思想准备，才能配合治疗。
+1.对初诊患者，在针刺前必须说明耳针疗法的特点，针刺耳穴后的反应，使患者有充分的思想准备，才能配合治疗。
 
 2.严密消毒，预防感染。耳廓冻伤和有炎症的部位禁针。若见针孔发红，患者觉耳廓胀痛，可能有轻度感染，应及早用2%碘酒涂擦或者口服消炎药物。
 
-3.有习惯性猗产史的孕妇应禁针。对年老体弱的高血压、动脉硬化患者，针刺前后应适当休息，针刺手法要轻，留针时间要短，以防意外。
+3.有习惯性流产史的孕妇应禁针。对年老体弱的高血压、动脉硬化患者，针刺前后应适当休息，针刺手法要轻，留针时间要短，以防意外。
 
-4.耳针亦可发生晕针，须注意预防，如发生晕针要及时处 理。
+4.耳针亦可发生晕针，须注意预防，如发生晕针要及时处理。
 
 5.对扭伤及肢体活动障碍的患者，进针后待耳廓充血发热， 宜嘱患者适当活动患部，或在患部按摩、加灸等，可增强疗效。
