update ok/gk/gk05-0.1.3.0.0.md. “成入”，修改为“成人”

--- a/ok/gk/gk05-0.1.3.0.0.md
+++ b/ok/gk/gk05-0.1.3.0.0.md
@@ -10,4 +10,4 @@
 
 3.骨痂改造期：骨折部虽已由原始骨痂所连接，但欠牢固，通过原始骨痂进一步改造，成骨细胞增加，新生骨小梁也逐渐增加，且逐渐排列规则和致密，而骨折端无菌坏死部分经过血管和成骨细胞和破骨细胞的侵入，进行坏死骨的清除和形成新骨的“爬行替代”过程，骨折部位形成了骨性连接：一般需要8〜12周才能完成。
 
-以后骨痂之骨小梁，根据伤员负重力线的需要，通过破骨细胞和成骨细胞的相互作用，进行重新排列，吸收不需要的骨痂，不足部位生长出新的骨质，使新骨构造完全适应它所耐受的张力和压力，骨髓腔重新沟通，从而恢复骨骼原形。最后骨折痕迹，在组织学或放射学上可完全或接近完全消失。成入一般所需时间2〜4年。儿童则2年以内。
+以后骨痂之骨小梁，根据伤员负重力线的需要，通过破骨细胞和成骨细胞的相互作用，进行重新排列，吸收不需要的骨痂，不足部位生长出新的骨质，使新骨构造完全适应它所耐受的张力和压力，骨髓腔重新沟通，从而恢复骨骼原形。最后骨折痕迹，在组织学或放射学上可完全或接近完全消失。成人一般所需时间2〜4年。儿童则2年以内。
