--- a/ok/yk/yk0zl07-0.2.3.0.0.md
+++ b/ok/yk/yk0zl07-0.2.3.0.0.md
@@ -2,7 +2,7 @@
 
 手术治疗是中医眼科外治法的内容之一。常用有钩割、劆洗、烙法、针法等。主要适用于药物治疗难以奏效的眼疾，如目疡成脓、倒睫拳毛、眼生赘疣、胬肉攀睛、圆翳内障等。现代中医眼科在继承整理古代手术治疗的基础上，吸收了现代医学的消毒、麻醉技术和一些眼科手术的长处，对某些传统手术进行了积极的改进，而且有所发展。现介绍如下：
 
-1.椒疮摩擦术：本手术是古代𠠟洗术的发展。古代所谓𠠟洗，是以锋针在椒疮颗粒上逐个刺之三五度，或以粗糙之草茎轻擦患部以出瘀血后，再用水冲洗的治法，现代多已不用。今之椒疮摩擦术，应用器械为海螵蛸棒，海螵蛸棒可以自制。
+1.椒疮摩擦术：本手术是古代劆洗术的发展。古代所谓劆洗，是以锋针在椒疮颗粒上逐个刺之三五度，或以粗糙之草茎轻擦患部以出瘀血后，再用水冲洗的治法，现代多已不用。今之椒疮摩擦术，应用器械为海螵蛸棒，海螵蛸棒可以自制。
 
 操作方法：左手翻转上脸，右手拿起摩擦棒粗头（体部），把另一头（头部）向沙眼的滤泡与乳头用轻快的手法，从左到右反复轻轻的摩擦（图11）。摩擦时间与反复摩擦的次数需根据病情决定，主要是能充分的擦去椒疮颗粒为目的。摩擦后，用生理盐水冲洗。
 
