--- a/ok/gk/gk05-0.1.5.0.0.md
+++ b/ok/gk/gk05-0.1.5.0.0.md
@@ -18,7 +18,7 @@
 
 （二）晩期并发症
 
-1.坠积性肺炎：老年骨折病入，长期卧床和躯干肢体被固定不动，咳痰困难，导致小气管阻塞和肺部坠积性充血，致肺功能减弱，而易发生炎症。因此，对年老骨折病人，要鼓励他作深呼吸，帮助咳痰，并多作功能锻练，在不影响骨折治疗的情况下，要定时坐起和翻身，及早下床活动。
+1.坠积性肺炎：老年骨折病人，长期卧床和躯干肢体被固定不动，咳痰困难，导致小气管阻塞和肺部坠积性充血，致肺功能减弱，而易发生炎症。因此，对年老骨折病人，要鼓励他作深呼吸，帮助咳痰，并多作功能锻练，在不影响骨折治疗的情况下，要定时坐起和翻身，及早下床活动。
 
 2.褥疮：躯干骨折后和肢体骨折并发截瘫者，骨突起处如骶骨部和足跟部，因长期压迫发生局部血液循环障碍，致组织坏死，形成溃疡，经久不愈。对此应加强护理，早期预防，褥疮好发部位要保持清洁、干燥，定期翻身、按摩，或在局部加用棉垫，毡垫或空气枕圈等，以减少压迫。
 
@@ -30,8 +30,8 @@
 
 6.损伤性关节炎：骨折线波及关节，若关节面软骨损伤或关节内骨折整复不良，畸形愈合，而致关节面不平；或关节附近的骨干畸形愈合，致使负重的关节面承受不均匀的压力，长期磨损可引起损伤性关节炎。
 
-7.神经损伤；骨折后，因骨折畸形愈合，致神经局部受牵拉，或临近骨折处的神经受骨痂压迫或包埋所致。
+7.神经损伤：骨折后，因骨折畸形愈合，致神经局部受牵拉，或临近骨折处的神经受骨痂压迫或包埋所致。
 
 8.缺血性骨坏死：骨折后，由于骨折段的供血被切断，可发生骨缺血性坏死。常见的有股骨颈骨折合并股骨头缺血性坏死及腕舟骨腰部骨折近骨折坏死等。
 
-9.迟发性畸形：常见儿童干骺端骨折或骨骷分离，骨骺遭到破坏，或治疗上欠妥，影响骨骺的发育或正常生长，致后期逐渐出现肢体畸形。
+9.迟发性畸形：常见儿童干骺端骨折或骨骺分离，骨骺遭到破坏，或治疗上欠妥，影响骨骺的发育或正常生长，致后期逐渐出现肢体畸形。
