--- a/ok/bc/bc02-0.1.1.0.0.md
+++ b/ok/bc/bc02-0.1.1.0.0.md
@@ -18,4 +18,4 @@
 
 此外，大黄治湿热黄疸，配茵陈、栀子，如茵陈蒿汤；治湿热淋浊，配木通、车前子、栀子等用之，如八正散。
 
-【用量用法】3-12克，煎服，一般分生用、制用、炒用的本同。生大黄泻下力较强，欲攻下宜用生者。入汤剂宜后下，或开水泡服，若久煎则泻下成分破坏，作用减弱。酒制大黄，又称酒军、熟军，系生大黄用黄酒拌蒸，使泻下清热之力缓和，然活血作用较好，瘀血证及不宜攻下者适用。大黄炒炭，多用于出血证。外用适量。
+【用量用法】3-12克，煎服，一般分生用、制用、炒用的不同。生大黄泻下力较强，欲攻下宜用生者。入汤剂宜后下，或开水泡服，若久煎则泻下成分破坏，作用减弱。酒制大黄，又称酒军、熟军，系生大黄用黄酒拌蒸，使泻下清热之力缓和，然活血作用较好，瘀血证及不宜攻下者适用。大黄炒炭，多用于出血证。外用适量。
