--- a/ok/fjx/fjx12-0.1.0.0.0.md
+++ b/ok/fjx/fjx12-0.1.0.0.0.md
@@ -14,9 +14,9 @@
 
 〔临证应用〕该方多用于治疗湿痰证。症见咳嗽痰多色白，胸膈胀满，恶心呕吐，或头眩心悸，舌苔白润，脉滑等。临床运用常在本方的基础上加减变化，可广泛治疗各种痰病，实为祛痰剂的代表方。
 
-若证属寒痰，脾胃阳虚，咳吐稀痰，胸膈满闷者，可加干姜砂仁以温中祛痰；脾肾阳虚，痰水上泛，痰清稀如水，脉沉，小便不利者，可加附子、肉桂以温阳化痰。若属风痰者，加制南星、白附子、皂角、竹沥以祛风化痰。若证属热痰者，痰黄而稠，可加石膏、天竺黄、黄芩、青黛等以清热化痰。若湿痰重者，肢体沉重，嗜卧不收等可加苍、白术以燥湿健脾。若食痰者，痰嗽嗳腐吞酸，脘胀纳呆者，可加炒莱菔子、焦三仙、枳壳以消食下气化痰。若燥痰者，痰粘难咯，可加瓜蒌、杏仁、贝母以清热润肺化痰。若属气痰者，如梅核气，吐之不出，咽之不下，为痰核聚于咽喉，可加香附、郁金、枳壳以行气解郁化痰。若痰流于经络肌肤，成为瘰疠痰核者，可加牡蛎，元参、海蛤、芒硝、昆布、海藻以化痰软坚散结。苦顽痰者，加礞石、海浮石以攻逐陈积深伏之痰。
+若证属寒痰，脾胃阳虚，咳吐稀痰，胸膈满闷者，可加干姜砂仁以温中祛痰；脾肾阳虚，痰水上泛，痰清稀如水，脉沉，小便不利者，可加附子、肉桂以温阳化痰。若属风痰者，加制南星、白附子、皂角、竹沥以祛风化痰。若证属热痰者，痰黄而稠，可加石膏、天竺黄、黄芩、青黛等以清热化痰。若湿痰重者，肢体沉重，嗜卧不收等可加苍、白术以燥湿健脾。若食痰者，痰嗽嗳腐吞酸，脘胀纳呆者，可加炒莱菔子、焦三仙、枳壳以消食下气化痰。若燥痰者，痰粘难咯，可加瓜蒌、杏仁、贝母以清热润肺化痰。若属气痰者，如梅核气，吐之不出，咽之不下，为痰核聚于咽喉，可加香附、郁金、枳壳以行气解郁化痰。若痰流于经络肌肤，成为瘰疠痰核者，可加牡蛎、元参、海蛤、芒硝、昆布、海藻以化痰软坚散结。苦顽痰者，加礞石、海浮石以攻逐陈积深伏之痰。
 
-以二陈汤为基础的方剂很多，如二陈汤去乌梅，加竹茹、枳实名为温胆汤，专治胆胃不和，痰热内扰之虚烦不得眠，或呕吐呃逆，以及惊悸不宁，癫癎等证。
+以二陈汤为基础的方剂很多，如二陈汤去乌梅，加竹茹、枳实名为温胆汤，专治胆胃不和，痰热内扰之虚烦不得眠，或呕吐呃逆，以及惊悸不宁，癫痫等证。
 
 如二陈汤去乌梅，加南星、枳实名为导痰汤。主治一切痰厥证，头目旋晕，或痰饮留积不散，胸膈痞塞，胁肋胀痛，头痛吐逆，喘急痰嗽，涕唾稠粘，坐卧不安，饮食不思等。
 
@@ -26,4 +26,7 @@
 
 二陈汤、温胆汤、导痰汤、涤痰汤，以及金水六君煎等五方，均为燥湿化痰之剂。但二陈汤是燥湿化痰之主方，除专治湿痰外，还可以加减用于其他的各种痰病；温胆汤重在清胆和胃，主治胆胃不和，痰热上扰之虚烦不眠、癫痫等证；导痰汤燥湿化痰之力大于二陈汤，且长于祛痰行气。主治痰涎壅盛以及肝风挟痰之眩晕痰厥等证；涤痰汤善长于豁痰开窍，为治中风痰迷，舌謇不语之专方。金水六君煎主治脾受湿困，湿痰内盛而肺肾阴虚之证。多见于老年患者。以痰多而有咸味、咽干舌燥为其特征。
 
-〔文献摘录〕汪昴：“此足太阴阳明药也。半夏辛温体滑性燥，行水利痰为君；痰因气滞，气顺则痰降，故以橘红利气；痰由湿生，湿去则痰消，故以茯苓渗湿为臣；中不和则痰涎聚，又以甘草和中补土为佐也。”（《医方集解》）
+〔文献摘录〕汪昂：“此足太阴阳明药也。半夏辛温体滑性燥，行水利痰为君；痰因气滞，气顺则痰降，故以橘红利气；痰由湿生，湿去则痰消，故以茯苓渗湿为臣；中不和则痰涎聚，又以甘草和中补土为佐也。”（《医方集解》）
+
+------
+电子版注：文献摘录部分，“汪昂”原书作“汪昴”，电子版已改。
