--- a/ok/gl/gl03-0.8.0.0.0.md
+++ b/ok/gl/gl03-0.8.0.0.0.md
@@ -16,7 +16,7 @@
 
 同样，内伤杂病之脏腑病变，亦可沿经络系统，由内传之于外。如《灵枢·邪客》篇指出：“肺心有邪，其气留于两肘；肝有邪，其气留于两腋；脾有邪，其气留于两髀；肾有邪，其气留于两腘”，是说五脏发生病变，其病邪可沿经络系统传之于经络循行分布的部位而引起该部位的病变。又如《素问•脏气法时论》说：“肝病者，两胁下痛，引少腹……；心病者，……两臂内痛；脾病者，……脚下痛；肺病者，……肩背痛；肾病者……大腹小腹痛”。这里的“胁下”、“两臂内”、“脚下”等处，都是发病脏腑所属经脉循行之处。临床上常见之肝火亢盛而见目赤，心火亢盛而见舌尖红赤，肾气虚而见耳鸣，脾气虚而见口中饮食无味，胃火亢盛而见齿龈肿痛，都证实了经络系统是脏腑病变反映于体表的途径。
 
-经络系统不仅能将外邪传之于内，内邪反映于外，而且脏与脏、腑与腑、脏与腑、经络与经络之间的病邪传变，也是通过经铬系统实现的。因为它们之间都存在着经络系统上的联系，在此不一一列举。
+经络系统不仅能将外邪传之于内，内邪反映于外，而且脏与脏、腑与腑、脏与腑、经络与经络之间的病邪传变，也是通过经络系统实现的。因为它们之间都存在着经络系统上的联系，在此不一一列举。
 
 ### 4.传输治疗效应
 
