update ok/bc/bc18-0.0.7.0.0.md. 错字

--- a/ok/bc/bc18-0.0.7.0.0.md
+++ b/ok/bc/bc18-0.0.7.0.0.md
@@ -1,6 +1,6 @@
 ### 诃子
 
-**〔原文〕苦以泄气消痰，酸以敛肺降火**，<small>李东垣曰：肺苦气上逆，急食苦以泄之，以酸补之。诃子苦重泄气，酸轻不能补肺，故嗽药中不用。</small> **涩以收脱止泻，温以开胃调中。治冷气腹胀，膈气呕逆，痰嗽喘急**，<small>肺挟痰水，或被火伤，故宜苦酸以敛之。</small>**泻痢脱肛，肠风崩带**，<small>皆取其酸涩。</small> **开音止渴**。<small>肺敛则音开，火降则渴止。古方有诃子清音汤。</small>**然苦多酸少，虽涩肠而泄气，气虚及嗽痢初起者忌服**。<small>同乌梅、倍子，则收敛；同陈皮、厚朴，则下气；得人参，治肺虚寒嗽；得陈皮、砂仁， 治冷气腹胀；佐白术、莲子，治虚寒久泻；佐樗皮，治肠风便血；同蛇床、五 味、山茱、续断、杜仲，治虚寒带下。</small>**从番舶来，番名词黎勒， 岭南亦有。六棱黑色，肉厚者良。酒蒸一伏时，去核取肉用，用肉则去核。生用清金行气，煨熟温胃固肠**。<small>海鱼放涎凝滑，船不能行，投诃子汤，寻化为水，其化痰可知。</small>
+**〔原文〕苦以泄气消痰，酸以敛肺降火**，<small>李东垣曰：肺苦气上逆，急食苦以泄之，以酸补之。诃子苦重泄气，酸轻不能补肺，故嗽药中不用。</small> **涩以收脱止泻，温以开胃调中。治冷气腹胀，膈气呕逆，痰嗽喘急**，<small>肺挟痰水，或被火伤，故宜苦酸以敛之。</small>**泻痢脱肛，肠风崩带**，<small>皆取其酸涩。</small> **开音止渴**。<small>肺敛则音开，火降则渴止。古方有诃子清音汤。</small>**然苦多酸少，虽涩肠而泄气，气虚及嗽痢初起者忌服**。<small>同乌梅、倍子，则收敛；同陈皮、厚朴，则下气；得人参，治肺虚寒嗽；得陈皮、砂仁， 治冷气腹胀；佐白术、莲子，治虚寒久泻；佐樗皮，治肠风便血；同蛇床、五味、山茱、续断、杜仲，治虚寒带下。</small>**从番舶来，番名诃黎勒， 岭南亦有。六棱黑色，肉厚者良。酒蒸一伏时，去核取肉用，用肉则去核。生用清金行气，煨熟温胃固肠**。<small>海鱼放涎凝滑，船不能行，投诃子汤，寻化为水，其化痰可知。</small>
 
 【讲解】**诃子以涩肠止泻、敛肺止咳为其主要功效**。为使君子科落叶乔木植物诃子的成熟果实。别名诃黎勒，若去核用果肉，则处方名诃子肉。原产印度、缅甸等处，今我国云南、广东，广西等地亦产。生用炒用。
 
@@ -8,7 +8,7 @@
 
 本品长于收敛，痰嗽泻痢初起，实邪尚盛者，忌服。
 
-【临证应用】诃子治久泻、久痢、脱肛等证，可根据证候的寒热不同而适当选择配伍。若配黄连、木香、甘草，即诃子散，治久痢腹痛而有热者。若配干姜、罂粟堯、除皮，即訶子皮散，以治虚寒久泻或脱肛之证。訶子配伍桔梗、甘草，如訶子汤，治失音不能言语者。配伍杏仁、通草、煨姜，如诃子饮，治久咳，语言不出之证。
+【临证应用】诃子治久泻、久痢、脱肛等证，可根据证候的寒热不同而适当选择配伍。若配黄连、木香、甘草，即诃子散，治久痢腹痛而有热者。若配干姜、罂粟壳、陈皮，即訶子皮散，以治虚寒久泻或脱肛之证。訶子配伍桔梗、甘草，如訶子汤，治失音不能言语者。配伍杏仁、通草、煨姜，如诃子饮，治久咳，语言不出之证。
 
 【用量用法】 3 —10克，煎服。敛肺降火生用，涩肠止泻煨熟用。	
 
