--- a/ok/gk/gk05-0.2.1.0.0.md
+++ b/ok/gk/gk05-0.2.1.0.0.md
@@ -4,13 +4,13 @@
 
 〔病因病机〕
 
-间接暴力或直接暴力均可造成骨折。间接暴力多因肩、肘部或手掌着地，暴力沿远侧段骨与关节向上传导至锁骨而造成骨折。直接暴力多因外力加于锁骨，多造成横断或粉碎性骨折。幼儿发生的骨折，多为横断或青枝型，由于幼儿骨质柔软，骨折后骨膜仍保持联系，在胸锁乳突肌的牵拉下，骨折处向上成角状如弩弓。成人骨折，多为横断型，偶有斜面或粉碎型。骨折好发于冲段，在喙锁韧带与胸锁乳头肌锁骨头抵止部之间，骨折端除有一重叠移位外，近折段因受胸锁乳头肌的牵拉，而向上、后方移位，远折段因受上肢重力和胸大肌、前锯肌的牵拉而向下、前方移位或短缩畸形（图5—6）。有时骨折可压迫锁骨下之神经及血管，如骨折端向外、上方移位时，可穿破皮肤而造成开放性骨折，但这两类骨折在临床上均少见。
+间接暴力或直接暴力均可造成骨折。间接暴力多因肩、肘部或手掌着地，暴力沿远侧段骨与关节向上传导至锁骨而造成骨折。直接暴力多因外力加于锁骨，多造成横断或粉碎性骨折。幼儿发生的骨折，多为横断或青枝型，由于幼儿骨质柔软，骨折后骨膜仍保持联系，在胸锁乳突肌的牵拉下，骨折处向上成角状如弩弓。成人骨折，多为横断型，偶有斜面或粉碎型。骨折好发于中段，在喙锁韧带与胸锁乳头肌锁骨头抵止部之间，骨折端除有重叠移位外，近折段因受胸锁乳头肌的牵拉，而向上、后方移位，远折段因受上肢重力和胸大肌、前锯肌的牵拉而向下、前方移位或短缩畸形（图5—6）。有时骨折可压迫锁骨下之神经及血管，如骨折端向外、上方移位时，可穿破皮肤而造成开放性骨折，但这两类骨折在临床上均少见。
 
 <img src="img\5-6.jpg" style="zoom:70%;" />
 
 〔诊断〕
 
-锁骨位置表浅，骨折后局部肿胀，触之疼痛，易摸到骨折瑞，故诊断不难。但对幼年患者，由于缺乏自诉能力，锁骨部皮下脂肪丰富，畸形不明显，甚易误诊，经仔细询问，患儿均有跌伤病史。为了减轻胸锁乳头肌痉挛，头部多向患侧偏斜，下额转向健侧，活动患肢或压迫锁骨折处均感疼痛，可诊断为锁骨骨折。有移位外1/3段骨折易与肩锁关节脱位相混淆，可拍摄锁骨正位X线片，有助于明确诊断。
+锁骨位置表浅，骨折后局部肿胀，触之疼痛，易摸到骨折瑞，故诊断不难。但对幼年患者，由于缺乏自诉能力，锁骨部皮下脂肪丰富，畸形不明显，甚易误诊，经仔细询问，患儿均有跌伤病史。为了减轻胸锁乳头肌痉挛，头部多向患侧偏斜，下颏转向健侧，活动患肢或压迫锁骨折处均感疼痛，可诊断为锁骨骨折。有移位外1/3段骨折易与肩锁关节脱位相混淆，可拍摄锁骨正位X线片，有助于明确诊断。
 
 〔治疗〕
 
