--- a/ok/gl/gl03-0.9.1.0.0.md
+++ b/ok/gl/gl03-0.9.1.0.0.md
@@ -28,7 +28,7 @@
 
 #### 3.从经络表里、交接、会合关系，辨数经合病
 
-由于经络的表里联系，经络循行中的交叉及会合关系，因而一经系统病变可以影响到他经系统，使相联系的他经系统发病并出现症状。临床上经常可以见到病人同时、或先后出现几个经系统病证。这时除了从发病部立位、脏腑辨证特点去辨识外，还应从经络系统的表里关系、交叉会合关系去分析辨别，有可能是一经病影响到与其有表里、交叉会合关系的他经而出现的综合病证。
+由于经络的表里联系，经络循行中的交叉及会合关系，因而一经系统病变可以影响到他经系统，使相联系的他经系统发病并出现症状。临床上经常可以见到病人同时、或先后出现几个经系统病证。这时除了从发病部位、脏腑辨证特点去辨识外，还应从经络系统的表里关系、交叉会合关系去分析辨别，有可能是一经病影响到与其有表里、交叉会合关系的他经而出现的综合病证。
 
 例如：风寒袭肺，出现鼻塞、鼻流清涕、恶寒发热等症，病在肺经。若兼见腹痛腹泻等手阳明大肠经病变，就应从肺经与大肠经的表里关系来考虑，因风寒之邪，由肺经而及于大肠经，所以肺经与大肠经两经病证并见。再如痄腮，病发于耳下两腮部（或一侧或双侧），证见局部肿胀热痛，食欲不振等，此为时疫邪毒侵犯经络。按其发病部位，应属足阳明胃经和足少阳胆经病证。但部分痄腮可出现睾丸肿痛，应如何理解分析呢？这是因为肝经与胆经为表里之经，二者经脉直接相接，而肝经络阴器，其别络还行经睾丸。所以，少阳胆经病变即可沿肝经传之于睾丸中。又如肺肾阴虚之虚劳咳嗽，病属肺肾两经。有的病人同时出现大便溏泻、食欲不振等脾胃气虚，运化失职之证。这就应该从经络系统交接联系去考虑。肺肾同病而喘嗽，是因为肾经直行支脉行于肺中所致；其出现的便溏、食欲不振，是因为肺经于鼻翼旁（[迎香](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.2.3.20.md)穴）与胃经交接，胃经与脾经又为表里之经，同时，肾经又与脾经交会于下肢内侧之[三阴交](https://www.gmzyjc.com/read/zjs/zjs3.1.4-6-0.0.1.3.6.md)穴，所以肺肾二经病会出现脾胃气虚，运化失职的证候。
 
