update ok/gk/gk05-0.2.2.0.0.md. 备注：〔病因病机〕的第四段末尾处，“岗上、岗下肌”原教材即为此，未作修改，不知是否为通假字，如能审核后做下原教材备注，会比较好理解

--- a/ok/gk/gk05-0.2.2.0.0.md
+++ b/ok/gk/gk05-0.2.2.0.0.md
@@ -4,7 +4,7 @@
 
 〔病因病机〕
 
-多为间接暴力的传导，是造成骨折的主要原因。当跌倒时，腕肘部伸直着地，身体倾向患侧，暴力向上传导，或由于跌倒时肘部着地而造成。直接暴力亦可发生骨折，如外力直接打击或摔倒时肩部着地而造成。当跌倒时上肢呈外展位，即造成外展型骨折，如上肢在内收位跌倒，即造成内收型骨折。骨折后断端相互嵌入，如非嵌入，不论其为外展型或内收型，均为以下的移位：由于岗上、岗下肌的牵拉，上骨折段外展外旋，由胸大肌背阔肌及大圆肌的牵引作用，下骨折段向内、向前移位，同时由于肱二头肌、三头肌的牵引并向上移位。并由于暴力及伤肢的重力影响，均可造成不同程度的向前成角畸形。如上臂在外展外旋位，遭受较严重的暴力，造成外展移位大骨折，其暴力未减而继续作用于骨折端，挤推肱骨头，形成肱骨头向前、下方脱出肩关节盂，上肢自身重力下垂，形成肱骨头骨折面向外、上方，远折段向外、上方严直的侧方移位和成角畸形.但此型在临床上罕见。
+多为间接暴力的传导，是造成骨折的主要原因。当跌倒时，腕肘部伸直着地，身体倾向患侧，暴力向上传导，或由于跌倒时肘部着地而造成。直接暴力亦可发生骨折，如外力直接打击或摔倒时肩部着地而造成。当跌倒时上肢呈外展位，即造成外展型骨折，如上肢在内收位跌倒，即造成内收型骨折。骨折后断端相互嵌入，如非嵌入，不论其为外展型或内收型，均为以下的移位：由于岗上、岗下肌的牵拉，上骨折段外展外旋，由胸大肌背阔肌及大圆肌的牵引作用，下骨折段向内、向前移位，同时由于肱二头肌、三头肌的牵引并向上移位。并由于暴力及伤肢的重力影响，均可造成不同程度的向前成角畸形。如上臂在外展外旋位，遭受较严重的暴力，造成外展移位大骨折，其暴力未减而继续作用于骨折端，挤推肱骨头，形成肱骨头向前、下方脱出肩关节盂，上肢自身重力下垂，形成肱骨头骨折面向外、上方，远折段向外、上方严重的侧方移位和成角畸形.但此型在临床上罕见。
 
 〔诊断〕
 
