--- a/ok/gk/gk05-0.2.2.0.0.md
+++ b/ok/gk/gk05-0.2.2.0.0.md
@@ -4,7 +4,7 @@
 
 〔病因病机〕
 
-多为间接暴力的传导，是造成骨折的主要原因。当跌倒时，腕肘部伸直着地，身体倾向患侧，暴力向上传导，或由于跌倒时肘部着地而造成。直接暴力亦可发生骨折，如外力直接打击或摔倒时肩部着地而造成。当跌倒时上肢呈外展位，即造成外展型骨折，如上肢在内收位跌倒，即造成内收型骨折。骨折后断端相互嵌入，如非嵌入，不论其为外展型或内收型，均为以下的移位：由于岗上、岗下肌的牵拉，上骨折段外展外旋，由胸大肌背阔肌及大圆肌的牵引作用，下骨折段向内、向前移位，同时由于肱二头肌、三头肌的牵引并向上移位。并由于暴力及伤肢的重力影响，均可造成不同程度的向前成角畸形。如上臂在外展外旋位，遭受较严重的暴力，造成外展移位大骨折，其暴力未减而继续作用于骨折端，挤推肱骨头，形成肱骨头向前、下方脱出肩关节盂，上肢自身重力下垂，形成肱骨头骨折面向外、上方，远折段向外、上方严重的侧方移位和成角畸形.但此型在临床上罕见。
+多为间接暴力的传导，是造成骨折的主要原因。当跌倒时，腕肘部伸直着地，身体倾向患侧，暴力向上传导，或由于跌倒时肘部着地而造成。直接暴力亦可发生骨折，如外力直接打击或摔倒时肩部着地而造成。当跌倒时上肢呈外展位，即造成外展型骨折，如上肢在内收位跌倒，即造成内收型骨折。骨折后断端相互嵌入，如非嵌入，不论其为外展型或内收型，均为以下的移位：由于岗上、岗下肌的牵拉，上骨折段外展外旋，由胸大肌背阔肌及大圆肌的牵引作用，下骨折段向内、向前移位，同时由于肱二头肌、三头肌的牵引并向上移位。并由于暴力及伤肢的重力影响，均可造成不同程度的向前成角畸形。如上臂在外展外旋位，遭受较严重的暴力，造成外展移位大骨折，其暴力未减而继续作用于骨折端，挤推肱骨头，形成肱骨头向前、下方脱出肩关节盂，上肢自身重力下垂，形成肱骨头骨折面向外、上方，远折段向外、上方严重的侧方移位和成角畸形。但此型在临床上罕见。
 
 〔诊断〕
 
@@ -14,7 +14,7 @@
 
 〔治疗〕
 
-无移位的裂纹型骨折或外展型骨折有嵌入，仅有20°以内的或角及轻度侧方移位者，尤其是老年人，可不作整复复位，用三角巾悬吊伤肢肘屈90°于胸前3〜4周。有移位骨折，需在局麻或氯胺酮麻醉下，行徒手整复、夹板外固定术。
+无移位的裂纹型骨折或外展型骨折有嵌入，仅有20°以内的成角及轻度侧方移位者，尤其是老年人，可不作整复复位，用三角巾悬吊伤肢肘屈90°于胸前3〜4周。有移位骨折，需在局麻或氯胺酮麻醉下，行徒手整复、夹板外固定术。
 
 1.手法整复：
 
@@ -36,7 +36,7 @@
 
 皮牵甩肩法之固定：患者取坐位，嘱患者握住1〜2公斤重量（儿童酌减），然后缓慢地伸直肘关节，医者用宽约5〜8公分的长条胶布自伤侧上肢肩峰贴至桡侧指端以下4公分，放一扩张板在其中（板中央钻一小孔）。再将胶布条向上粘贴尺侧至腋下（胶布粘贴范围超过骨折线为度），用绷带将胶布从肩至肘臂缠绕加固胶布2〜3周，松紧为度，扩张板下悬吊1〜2公斤的重量。
 
-3.功能锻炼：固定后注意伤肢的血运情况，调节布带的松紧度。术后即开始功能锻炼，一般先作握拳活动，使上肢肌肉紧张，一周后开始耸肩活动。锻炼时外展型避免上肢外展动作，内收型避免上肢内收动作。一周后活动范围和活动量可以逐渐力大。
+3.功能锻炼：固定后注意伤肢的血运情况，调节布带的松紧度。术后即开始功能锻炼，一般先作握拳活动，使上肢肌肉紧张，一周后开始耸肩活动。锻炼时外展型避免上肢外展动作，内收型避免上肢内收动作。一周后活动范围和活动量可以逐渐加大。
 
 皮牵甩肩法的活动锻练，待皮牵做好后，即嘱患者做矢状面前后摆动，做时患者上半身略向伤侧倾斜。2〜3天后，患者上半身略向前倾，然后使伤肢在额状面作左右摆动锻炼，3〜4天后还要做伤肢做画圈动作锻炼。睡觉时，对内收型骨折，将伤肢外展40-50°，外展型可于中立位前屈30°作牵引，用2公斤重量在滑轮上维持牵引。
 
