--- a/ok/fjx/fjx12-0.4.0.0.0.md
+++ b/ok/fjx/fjx12-0.4.0.0.0.md
@@ -4,7 +4,7 @@
 
 〔煎服法〕水三盅，煎二盅，作二服，每服一盅，不用姜，不拘时，徐徐服。
 
-〔讲解〕本方主治风寒外束，痰热内蕴之证。其病证特点以外感后，哮喘痰多，痰稠色黄为主证。治宜宣肺法邪，清热化痰之法。方中用麻黄宣肺平喘兼以解表寒；杏仁降逆平喘，两药相配，宣降肺气、化痰平喘之功效更捷，共为君药。苏子、半夏化痰降逆；桑白皮、黄芩、款冬花清热肃肺，共为臣药，白果甘涩定喘敛肺，与麻黄相伍，散收并用，不仅增强平喘之功，还能防止麻黄过于宣散肺气之弊，故为佐药。然本方主治风寒外束，痰热壅肺之证，用药最忌敛涩之品，惟恐留邪，因此，白果用量不宜过大。甘草为使，调和诸药，兼可化痰。
+〔讲解〕本方主治风寒外束，痰热内蕴之证。其病证特点以外感后，哮喘痰多，痰稠色黄为主证。治宜宣肺祛邪，清热化痰之法。方中用麻黄宣肺平喘兼以解表寒；杏仁降逆平喘，两药相配，宣降肺气、化痰平喘之功效更捷，共为君药。苏子、半夏化痰降逆；桑白皮、黄芩、款冬花清热肃肺，共为臣药，白果甘涩定喘敛肺，与麻黄相伍，散收并用，不仅增强平喘之功，还能防止麻黄过于宣散肺气之弊，故为佐药。然本方主治风寒外束，痰热壅肺之证，用药最忌敛涩之品，惟恐留邪，因此，白果用量不宜过大。甘草为使，调和诸药，兼可化痰。
 
 综上分析，本方组成是宣、清、降三法结合，以宣降肺气，定喘化痰为主，清热解表为辅。使肺气得宣，痰热得清，风寒得解，则喘咳痰多之症自除。
 
@@ -12,7 +12,7 @@
 
 本方与小青龙汤均治外寒内饮之喘证，但本方具有降气平喘清热化痰之功，所治哮喘属内有痰热者，以哮喘痰多，色黄质稠，苔白腻，中心略黄或舌尖红为特点；而小青龙汤则是宣肺散寒，温阳化饮，专治内有寒饮之哮喘，以喘咳痰多，色白质稀，苔白滑腻为特点。
 
-与本方同名异方有二，供参考。（1）定喘汤（《校注妇人良方》),治痰喘胸满，坐卧不安，声重鼻塞头昏。组成：半夏曲 明阿胶炒 甘草炒各五分 罂粟壳制，一钱 五味子杵炒 桑白皮炒 麻黄去节 人参各三分 上姜三片 乌梅半个。水煎、临卧服，（2）定喘汤（《沈氏尊生方》)，治痰喘。紫苑、五味子、橘红、炙甘草、苏子、桑白皮、苏叶、杏仁、半夏、枳壳、加生姜，甚者加葶苈子、厚朴、陈皮、前胡。
+与本方同名异方有二，供参考。（1）定喘汤（《校注妇人良方》)，治痰喘胸满，坐卧不安，声重鼻塞头昏。组成：半夏曲 明阿胶炒 甘草炒各五分 罂粟壳制，一钱 五味子杵炒 桑白皮炒 麻黄去节 人参各三分 上姜三片 乌梅半个。水煎、临卧服。（2）定喘汤（《沈氏尊生方》)，治痰喘。紫苑、五味子、橘红、炙甘草、苏子、桑白皮、苏叶、杏仁、半夏、枳壳，加生姜，甚者加葶苈子、厚朴、陈皮、前胡。
 
 〔临证应用〕本方主要用于素体痰多，复感风寒，致肺气壅闭，症见哮喘气急，痰多质稠，舌苔白腻中黄或舌尖红，脉滑而数。
 
