--- a/ok/fjx/fjx12-0.5.0.0.0.md
+++ b/ok/fjx/fjx12-0.5.0.0.0.md
@@ -1,8 +1,8 @@
 ## 礞石滚痰丸《丹溪心法附余》引王隐君方
 
-〔组成〕大黄酒蒸 片黄芩酒洗净，各八两（各240克） 礞石一两（30克)，捶摔，用焰硝一两〈30克），放入小砂罐内盖之，铁线缚定，盐泥固济，晒干，火煅红，候冷取出 沉香半两（15克）
+〔组成〕大黄酒蒸 片黄芩酒洗净，各八两（各240克） 礞石一两（30克)，捶摔，用焰硝一两（30克），放入小砂罐内盖之，铁线缚定，盐泥固济，晒干，火煅红，候冷取出 沉香半两（15克）
 
-〔煎服法〕上为细末，水丸梧子大，每服四、五十丸，量虚实加减服，清茶、温水送下，临卧食后服（现代用法：水泛示丸，每服5至9克，日1～2次，温开水送下）。
+〔煎服法〕上为细末，水丸梧子大，每服四、五十丸，量虚实加减服，清茶、温水送下，临卧食后服（现代用法：水泛小丸，每服5至9克，日1～2次，温开水送下）。
 
 〔讲解〕本方专治实热老痰为患者。临证凡是癫狂惊悸，或怔忡昏迷或咳嗽痰稠等证，见大便干燥，舌苔白厚欠津或黄腻者，即可使用本方降火逐痰。方中用礞石为君，取其慓悍之性，与硝石同煅，其性疏快，下气平喘，且能攻逐陈积之顽痰。大黄苦寒，荡涤实热，以开痰火下行之路为臣药。佐以黄芩清上焦之热，消除成痰之因，二味用量独重，实有正本清源之意。又痰随气升降，治痰必理气，故用沉香调达气机，为诸药开导，是为使药。四药共奏降火逐痰之效。
 
@@ -26,7 +26,7 @@
 
 3．试述止嗽散的组成、功用、主冶及加减方法。
 
-4．为什么止嗽散可用于治疗多种陔嗽证？
+4．为什么止嗽散可用于治疗多种咳嗽证？
 
 5．三子养亲汤用药有何特点？
 
