--- a/ok/gk/gk05-0.2.3.0.0.md
+++ b/ok/gk/gk05-0.2.3.0.0.md
@@ -42,6 +42,6 @@
 
 <img src="img\5-17.jpg" style="zoom:70%;" />
 
-夹板的安扎，一般将事先准备好三四块夹板，先安前后，后安内外侧夹板，用四度扎带捆扎，先扎中段二条，后扎上下二条，原则是上1/3骨折用超肩关节夹板固定，中1/3骨折不超关节，下1/3骨折超肘关节夹板八固定。前臂置中立位三角巾肘屈90°胸前固定。
+夹板的安扎，一般将事先准备好三四块夹板，先安前后，后安内外侧夹板，用四度扎带捆扎，先扎中段二条，后扎上下二条，原则是上1/3骨折用超肩关节夹板固定，中1/3骨折不超关节，下1/3骨折超肘关节夹板固定。前臂置中立位三角巾肘屈90°胸前固定。
 
-3.练功：患者半卧位，术后即可鼓励其做握拳及耸臂动作，使上肢肌肉处于紧张状态；做腕肩关节活动，注意避免前臂左右摇拉。定期复査，注意布带的松紧度及手指的血运情况。一般固定4〜周左右，骨折达到临床愈合标准时，去除外固定，外用四肢损伤洗方，至骨性完全愈合。
+3.练功：患者半卧位，术后即可鼓励其做握拳及耸臂动作，使上肢肌肉处于紧张状态；做腕肩关节活动，注意避免前臂左右摇拉。定期复査，注意布带的松紧度及手指的血运情况。一般固定4〜6周左右，骨折达到临床愈合标准时，去除外固定，外用四肢损伤洗方，至骨性完全愈合。
