--- a/ok/gl/gl03-0.9.2.0.0.md
+++ b/ok/gl/gl03-0.9.2.0.0.md
@@ -40,7 +40,7 @@
 
 〔经筋病证〕
 
-《灵枢·经筋》：其病足中指支，胫转筋，脚跳坚，伏免转筋，髀前肿，溃疝，腹筋急，引缺盆及颊，卒口僻，急则目不合，热则筋纵目不开。颊筋有寒则急，引颊移口；有热则筋弛纵缓，不胜收，故僻。
+《灵枢·经筋》：其病足中指支，胫转筋，脚跳坚，伏兔转筋，髀前肿，㿉疝，腹筋急，引缺盆及颊，卒口僻，急则目不合，热则筋纵目不开。颊筋有寒则急，引颊移口；有热则筋弛纵缓，不胜收，故僻。
 
 ##### 4.足太阴脾经系统病证
 
