--- a/ok/fjx/fjx13-0.1.0.0.0.md
+++ b/ok/fjx/fjx13-0.1.0.0.0.md
@@ -1,19 +1,19 @@
 ## 真人养脏汤《太平惠民和剂局方》
 
-〔组成〕罂栗壳（去蒂盖蜜炙）三两六钱（15克） 诃子（去核，面裹煨）一两二钱（10克） 肉豆蔻（面裹煨）五钱（10克） 人参（六钱）10克 白术〈炒）六钱（15克）当归（去芦）六钱（15克）白芍一两六钱（20克） 肉桂（去粗皮）八钱（5克） 甘草（炙）八钱（10克） 木香（不见火）一两四钱（10克）
+〔组成〕罂栗壳（去蒂盖蜜炙）三两六钱（15克） 诃子（去核，面裹煨）一两二钱（10克） 肉豆蔻（面裹煨）五钱（10克） 人参（六钱）10克 白术（炒）六钱（15克）当归（去芦）六钱（15克）白芍一两六钱（20克） 肉桂（去粗皮）八钱（5克） 甘草（炙）八钱（10克） 木香（不见火）一两四钱（10克）
 
 〔煎服法〕以水一盏半（约500毫升），煎至八分，去渣食前温服。
 
-〔讲解〕本方为治疗虚寒久痢的重要方剂，亦用于久泻、脱肛。方中以甘温大补元气之人参及甘苦温健脾益气之白术为君,二药合用有补气健脾固中之功，以辛甘大热之肉桂温肾阳、壮命火而暖脾土，以辛温之肉豆蔻理气涩肠，以苦涩之诃子、罂粟壳涩肠止泻固脱，合而为臣，辅佐君药。以当归、白芍养血和阴，木香理气醒脾为佐，而以甘草和中为使。芍药与甘草相合又能缓急止痛。共成一温中补虚，涩肠止泻之良方。
+〔讲解〕本方为治疗虚寒久痢的重要方剂，亦用于久泻、脱肛。方中以甘温大补元气之人参及甘苦温健脾益气之白术为君，二药合用有补气健脾固中之功，以辛甘大热之肉桂温肾阳、壮命火而暖脾土，以辛温之肉豆蔻理气涩肠，以苦涩之诃子、罂粟壳涩肠止泻固脱，合而为臣，辅佐君药。以当归、白芍养血和阴，木香理气醒脾为佐，而以甘草和中为使。芍药与甘草相合又能缓急止痛。共成一温中补虚，涩肠止泻之良方。
 
 本方温中健脾，涩肠止泻，用于虚寒久痢、久泻则宜，用于暴泻、初病，邪未去，滞尚在，里不虚，或湿热致疾者则谬，因有留滞、敛邪、助火之害，故初病者使用本方须极为慎重，必明辨确属虚寒泄泻而无邪滞者方可。
 
-〔临证应用〕用于虚寒久痢：证见泄痢日久，日夜无度，里急后重不除，脐腹冷痛不解,便下脓血，或如鱼脑，脘痞不食，脉迟舌淡者。
+〔临证应用〕用于虚寒久痢：证见泄痢日久，日夜无度，里急后重不除，脐腹冷痛不解，便下脓血，或如鱼脑，脘痞不食，脉迟舌淡者。
 
 用于久泻脱肛：老幼病弱之人，泄泻日久，大肠收摄无权，肛门滑脱不收，中气虚陷者，须温中涩肠而兼予升提，以收下坠之肛门，可于本方中加升麻、柴胡、黄芪、川芎等。
 
 用于久泄欲脱：泄泻日久，中阳不继，下泄不止，阳气衰微，手足逆冷，有阳脱之虑，可于本方中加附子、干姜，既可涩肠止泻，又能回阳固脱。
 
-用于小儿虚泻；小儿泄泻日久不愈，脐腹冷痛，面色青黄或白，泻不止而舌上苔，滞未全清者，本方加神曲、焦山楂、石榴皮，小便短少不利者，溲白加茯苓、泽泻；溲黄加木通、车前子；久泻不止，绝口不食，上焦有虚火上炎之象，口燥舌疮，下焦有元气将绝之征，足冷不温，呕逆不止，方中加灶心土、清半夏，另用吴茱萸煎汤源足，引肾火归原，或可挽回于万一。
+用于小儿虚泻：小儿泄泻日久不愈，脐腹冷痛，面色青黄或白，泻不止而舌上苔，滞未全清者，本方加神曲、焦山楂、石榴皮，小便短少不利者，溲白加茯苓、泽泻；溲黄加木通、车前子；久泻不止，绝口不食，上焦有虚火上炎之象，口燥舌疮，下焦有元气将绝之征，足冷不温，呕逆不止，方中加灶心土、清半夏，另用吴茱萸煎汤源足，引肾火归原，或可挽回于万一。
 
 总之，久泻不离脾肾，脾司运化，肾主关门，二脏既衰，水谷不化，清浊不分，收摄不行，下注无度，是为本方之主要对证，而又以脾虚为主，使用时尚须注意令病人禁生冷、油腻、腥物等一切损脾、碍脾、滞阻脾胃运化之品，若以肾阳虚衰为主之五更泻，则宜主于暖肾补火之四神丸，若以阵阵痛泻，脉弦面青之肝木凌脾致泻者，宜痛泻要方扶土抑木，均非本方主治，临证须加详辨。
