--- a/ok/fjx/fjx13-0.2.0.0.0.md
+++ b/ok/fjx/fjx13-0.2.0.0.0.md
@@ -1,6 +1,6 @@
 ## 四神丸《证治准绳》
 
-〔组成〕破故纸四两酒浸一宿炒（25克） 五味子三两炒（15克）肉豆蔻二两面裹煨（15克） 吴茱萸一两盐汤炮（10克） 生姜八两（20克） 大枣百枚〈15克）
+〔组成〕破故纸四两酒浸一宿炒（25克） 五味子三两炒（15克）肉豆蔻二两面裹煨（15克） 吴茱萸一两盐汤炮（10克） 生姜八两（20克） 大枣百枚（15克）
 
 注：本方原为丸药方，括号内所加为变汤剂的参考用量。
 
@@ -22,13 +22,13 @@
 
 若土虚而木盛，並有病泻阵阵，面青胁胀或少腹两侧痛者，可加台乌药、川郁金等疏泄木郁，行郁止痛。
 
-若泄泻日久，肛脱不收，自觉中气不足，言微息短者,可加炙黄芪、土炒白术、党参等补益中气，以及川升麻升提之。
+若泄泻日久，肛脱不收，自觉中气不足，言微息短者，可加炙黄芪、土炒白术、党参等补益中气，以及川升麻升提之。
 
 本方之变化尚有：
 
 仅用破故纸、肉豆蔻二味，为二神丸，枣肉为丸，治年久虚泄，全不进食。
 
-单用五味子．吴茱萸，名五味子散，用意亦在温阳收涩止泻，主洽大略相同。
+单用五味子、吴茱萸，名五味子散，用意亦在温阳收涩止泻，主洽大略相同。
 
 本方去五味子散，加木香、茴香，名澹寮四神丸，止涩之力减而温理气机、行气止痛之力强，治阳虚便溏、久泻、五更泻中腹痛较重者。
 
