--- a/ok/fjx/fjx13-0.3.0.0.0.md
+++ b/ok/fjx/fjx13-0.3.0.0.0.md
@@ -1,6 +1,6 @@
 ## 桑螵蛸散《本草衍义》
 
-〔组成〕桑螵蛸盐水炒（15克） 人参（5克） 茯苓或茯神（25克）远志〈10克） 石菖蒲盐炒（10克） 龙骨煅（10克） 龟板酥炙（15克） 当归（10克）
+〔组成〕桑螵蛸盐水炒（15克） 人参（5克） 茯苓或茯神（25克）远志（10克） 石菖蒲盐炒（10克） 龙骨煅（10克） 龟板酥炙（15克） 当归（10克）
 
 注：原方为散剂，各味药等分，研末，卧前服二钱，故每味药下未注原用量。
 
@@ -20,7 +20,7 @@
 
 用于遗精有而不甚，但失眠、健忘、心悸诸证俱著者，本方加五味子涩精安神，炒枣仁安神定志。
 
-用于消渴，小便频数，口干，失眠，要不痠楚，本方加五味子敛阴气，山药、山萸肉固肾气。
+用于消渴，小便频数，口干，失眠，腰部痠楚，本方加五味子敛阴气，山药、山萸肉固肾气。
 
 又，仍以桑螵蛸为君药，以鹿茸、牡蛎为臣药，而用黄芪、甘草为佐药，则用治肾之阳气不足，夜尿为甚，尿频而少者，温肾固涩，亦名桑螵蛸散。
 
