--- a/ok/bc/bc03-0.2.1.0.0.md
+++ b/ok/bc/bc03-0.2.1.0.0.md
@@ -1,14 +1,14 @@
 ### 黄芩
 
-**〔原文〕苦入心，寒胜热。泻中焦实火，除脾家湿热。治澼痢**（1）**腹痛**，<small>便血曰澼，寒痛忌用。凡腹痛有寒热虚实，食积、瘀血、痰湿之不同。寒宜温，热宜清，虚宜补，实宜下，食宜消导，瘀血宜行散，痰湿宜化痰利湿。痛时手不可按者为实痛，按之痛止者为虚痛。</small>**寒热往来**，<small>邪在少阳</small>。**黄疽五淋，血闭**<small>实热在血分</small>。**气逆，痈疽疮疡，及诸失血。消痰**<small>丹溪以黄芩降痰假其降火也。按痰因火动，当先降火</small>。**利水，解渴安胎**，<small>胎孕宜清热凉血，血不妄行则胎安</small>。**养阴退阳，补膀胱水。酒炒则上行，泻肺火，利胸中气**<small>肺主气，热伤气，泻热所以保肺</small>。**治上焦之风热湿热**，<small>丹溪曰：黄芩上中二焦药</small>。**火嗽喉腥**，<small>五臭，肺为腥</small>。**目赤肿痛**。**过服损胃，血虚寒中者禁用**。<small>得柴胡退寒热，得芍药治痢，得厚朴、黄连止腹痛，得桑皮泻肺火，得白术安胎之圣药。时珍曰：仲景治少阳证小柴胡汤，太阳少阳合病下利黄芩汤，少阳证下后心满泻心汤，并用之。盖黄连苦寒，入心泻热，除脾家湿热，使胃火不流入肺，不致刑金，即所以保肺也。肺虚不宜者，苦寒伤土，损其母也。少阳证虽在半表半里，而心膈痞满，实兼心肺上焦之邪；心烦喜呕，默默不欲食，又兼脾胃中焦之证，故用黄芩以治手足少阳相火，黄芩亦少阳药也。杨士瀛曰，柴胡退热，不及黄芩。时珍曰：柴胡乃苦以发之，散火之标也；黄芩乃寒能胜热，折火之本也。东垣治肺热，身如火燎，烦躁引饮，而昼盛者，宜一味黄芩汤，以泻肺经气分之火。黄芩一两煎服。《本事方》用治崩中暴下</small>。**黄明者良。中虚名枯芩**，<small>即片芩</small>。**泻肺火，清肌表之热。内实名条芩**,<small>即子芩</small>。**泻大肠火，补膀胱水。上行酒炒。泻肝胆火，猪胆汁炒。山茱萸、龙骨为使，畏丹皮、丹砂**。
+**〔原文〕苦入心，寒胜热。泻中焦实火，除脾家湿热。治澼痢**（1）**腹痛**，<small>便血曰澼，寒痛忌用。凡腹痛有寒热虚实，食积、瘀血、痰湿之不同。寒宜温，热宜清，虚宜补，实宜下，食宜消导，瘀血宜行散，痰湿宜化痰利湿。痛时手不可按者为实痛，按之痛止者为虚痛。</small>**寒热往来**，<small>邪在少阳</small>。**黄疸五淋，血闭**<small>实热在血分</small>。**气逆，痈疽疮疡，及诸失血。消痰**<small>丹溪以黄芩降痰假其降火也。按痰因火动，当先降火</small>。**利水，解渴安胎**，<small>胎孕宜清热凉血，血不妄行则胎安</small>。**养阴退阳，补膀胱水。酒炒则上行，泻肺火，利胸中气**<small>肺主气，热伤气，泻热所以保肺</small>。**治上焦之风热湿热**，<small>丹溪曰：黄芩上中二焦药</small>。**火嗽喉腥**，<small>五臭，肺为腥</small>。**目赤肿痛**。**过服损胃，血虚寒中者禁用**。<small>得柴胡退寒热，得芍药治痢，得厚朴、黄连止腹痛，得桑皮泻肺火，得白术安胎之圣药。时珍曰：仲景治少阳证小柴胡汤，太阳少阳合病下利黄芩汤，少阳证下后心满泻心汤，并用之。盖黄连苦寒，入心泻热，除脾家湿热，使胃火不流入肺，不致刑金，即所以保肺也。肺虚不宜者，苦寒伤土，损其母也。少阳证虽在半表半里，而心膈痞满，实兼心肺上焦之邪；心烦喜呕，默默不欲食，又兼脾胃中焦之证，故用黄芩以治手足少阳相火，黄芩亦少阳药也。杨士瀛曰，柴胡退热，不及黄芩。时珍曰：柴胡乃苦以发之，散火之标也；黄芩乃寒能胜热，折火之本也。东垣治肺热，身如火燎，烦躁引饮，而昼盛者，宜一味黄芩汤，以泻肺经气分之火。黄芩一两煎服。《本事方》用治崩中暴下</small>。**黄明者良。中虚名枯芩**，<small>即片芩</small>。**泻肺火，清肌表之热。内实名条芩**,<small>即子芩</small>。**泻大肠火，补膀胱水。上行酒炒。泻肝胆火，猪胆汁炒。山茱萸、龙骨为使，畏丹皮、丹砂**。
 
 【讲解】（1）澼痢:指便血和痢疾。
 
 **黄芩功能清热燥湿，兼有止血安胎作用**。为唇形科多年生草本植物黄芩的根。习惯将中心空而发黑，外表呈黄棕色，颇似腐木的老根称枯芩或片芩；将中实色青，外呈黄色的细条嫩根称为子芩或条芩。切片，生用，酒炒或炒炭用。
 
-本品苦寒。苦能燥湿，寒能清热，为清热燥湿常用之品。入肺、胆、大肠、胃、心经。其功用以泻肺经之热为主，但通过适当配伍又能清诸经之湿热，故可用于湿热诸证，如湿热黄疽，泄痢热淋，痈肿疮毒，吐衄出血等证。然苦寒之品，能伤脾胃，故凡脾胃虚寒，少食便溏者忌服。
+本品苦寒。苦能燥湿，寒能清热，为清热燥湿常用之品。入肺、胆、大肠、胃、心经。其功用以泻肺经之热为主，但通过适当配伍又能清诸经之湿热，故可用于湿热诸证，如湿热黄疸，泄痢热淋，痈肿疮毒，吐衄出血等证。然苦寒之品，能伤脾胃，故凡脾胃虚寒，少食便溏者忌服。
 
-【临证应用】   黄芩善清肺火，对邪热犯肺，身热咳嗽，痰黄粘稠之证，效果尤佳。单用即为黄芩散，或配知母、桑白皮、麦冬等，如清肺汤，治肺热咳嗽气促。本品通过配伍，应用极广，配柴胡，如小柴胡汤，以解少阳之邪，而治寒热往来；配芍药，如黄芩汤，以清大肠湿热而治泻痢腹痛；配木通、生地，如火府丹，以导小肠热而通淋；配山栀、茵陈等以治黄疽；配白蔻仁、滑石等以清热化湿而治湿温发热，胸闷，如黄芩滑石汤；配黄连、栀子、石膏等，可清气分实热，以治热病神昏及热毒疮疡。
+【临证应用】   黄芩善清肺火，对邪热犯肺，身热咳嗽，痰黄粘稠之证，效果尤佳。单用即为黄芩散，或配知母、桑白皮、麦冬等，如清肺汤，治肺热咳嗽气促。本品通过配伍，应用极广，配柴胡，如小柴胡汤，以解少阳之邪，而治寒热往来；配芍药，如黄芩汤，以清大肠湿热而治泻痢腹痛；配木通、生地，如火府丹，以导小肠热而通淋；配山栀、茵陈等以治黄疸；配白蔻仁、滑石等以清热化湿而治湿温发热，胸闷，如黄芩滑石汤；配黄连、栀子、石膏等，可清气分实热，以治热病神昏及热毒疮疡。
 
 此外，本品尚有止血安胎的作用，治血热妄行的吐血、衄血、便血等证，可炒炭与生地、白茅根等伍用。胎热不安者，以黄芩配白术、当归、白芍等以清热安胎，如当归散。 
 
