--- a/ok/bc/bc03-0.2.2.0.0.md
+++ b/ok/bc/bc03-0.2.2.0.0.md
@@ -1,6 +1,6 @@
-### 黄连
+### 黄  连
 
-**〔原文〕大苦大寒。入心泻火**，王海藏曰：泻心实泻脾也。实则泻其子。**镇肝凉血**，凡治血，防风为上部之使，黄连为中部之使，地榆为下部之使。**燥湿开郁**，**解渴**单用能治消渴。**除烦，益肝胆，厚脾胃，消心瘀**，能去心窍恶血。**止盗汗**。凉心。**治肠澼泻痢**，便血曰澼，有脏连丸。湿热郁而为痢，黄连治痢要药。噤口者热壅上焦，同人参煎汤呷之，但得下咽便好。喻嘉言曰：下痢必先汗解其外，后调其内。首用辛凉以解表，次用苦寒以攻里。《机要》曰：后重宜下，腹痛宜和，身重宜除湿，脉弦宜去风，风邪内结宜汗，身冷自汗宜温，脓血粘稠宜重剂以竭之。下痢，赤属血分，白属气分。戴氏曰:俗谓赤热白寒者非也，通作湿热处治，但有新久虚实之分。**痞满**燥湿开郁。张仲景治九种心下痞，五等泻心汤皆用之。**腹痛** ， 清热。**心痛伏梁**（1）心积，**目痛眦伤**，人乳浸点或合归、芍等分，煎汤热洗，散热活血。**痈疽疮疥**，诸痛痒疮，皆属心火。**酒毒胎毒**（2）。小儿初生，合甘草为末，蜜调令咽之。**明目**《传信方》：羊肝一具，黄连一两，捣丸，名羊肝丸，凡是目疾皆治。**定惊**，镇肝。**止汗解毒**，**除疳**同猪肚蒸为丸，**杀蚘**。蚘得苦则伏，**虚寒为病者禁用**。久服黄连、苦参反热，从火化也。昂按：炎上作苦，味苦必燥，燥则热矣。且苦寒沉阴肃杀，伐伤生和之气也。韩?曰：黄连与肉桂同行，能交心肾于顷刻。时珍曰:治痢用香连丸；姜连丸用薄连、干姜；姜黄散用黄连、生姜;左金丸用黄连、吴茱萸。治口疮用黄连细辛；止下血用黄连大蒜。一阴一阳，寒因热用，热因寒用，最得制方之妙。**出宣州者粗肥，出四川者瘦小。状类鹰爪连珠者良，去毛。治心火生用，虚火醋炒,肝胆火猪胆汁炒，上焦火酒炒，**有吞酸嘈杂等证，亦有吐酸者名酢心，宜黄连吴茱萸降火开郁。酢，音醋。**中焦火姜汁炒，下焦火盐水或童便炒，食积火黄土炒，治湿热胃在气分，吴茱萸汤炒，在血分干漆水炒，点眼赤人乳浸**。时珍曰：诸法不独为之引导，盖辛热制其寒苦，咸寒制其燥性，用者详之。**黃芩、龙骨为使，恶菊花、玄参、僵蚕、白鲜皮，畏款冬、牛膝，忌猪肉**，时珍曰： 方有脏连丸，黄连猪肚丸，岂忌肉而不忌脏腑乎。**杀乌头，巴豆毒**。黄连泻心火，佐以龙胆泻肝胆火，白芍泻脾火，石膏泻胃火，知母泻肾火，黄柏泻膀胱火，木通泻小肠火。黄芩泻肺火，栀子佐之；泻大肠火，黄连佐之；柴胡泻肝胆火，.黄连佐之，泻三焦火，黄芩佐之。郑奠一曰：热郁恶心，兀兀欲吐黄连数分甚效。
+**〔原文〕大苦大寒。入心泻火**，王海藏曰：泻心实泻脾也。实则泻其子。**镇肝凉血**，凡治血，防风为上部之使，黄连为中部之使，地榆为下部之使。**燥湿开郁**，**解渴**单用能治消渴。**除烦，益肝胆，厚脾胃，消心瘀**，能去心窍恶血。**止盗汗**。凉心。**治肠澼泻痢**，便血曰澼，有脏连丸。湿热郁而为痢，黄连治痢要药。噤口者热壅上焦，同人参煎汤呷之，但得下咽便好。喻嘉言曰：下痢必先汗解其外，后调其内。首用辛凉以解表，次用苦寒以攻里。《机要》曰：后重宜下，腹痛宜和，身重宜除湿，脉弦宜去风，风邪内结宜汗，身冷自汗宜温，脓血粘稠宜重剂以竭之。下痢，赤属血分，白属气分。戴氏曰:俗谓赤热白寒者非也，通作湿热处治，但有新久虚实之分。**痞满**燥湿开郁。张仲景治九种心下痞，五等泻心汤皆用之。**腹痛** ， 清热。**心痛伏梁**（1）心积，**目痛眦伤**，人乳浸点或合归、芍等分，煎汤热洗，散热活血。**痈疽疮疥**，诸痛痒疮，皆属心火。**酒毒胎毒**（2）。小儿初生，合甘草为末，蜜调令咽之。**明目**《传信方》：羊肝一具，黄连一两，捣丸，名羊肝丸，凡是目疾皆治。**定惊**，镇肝。**止汗解毒**，**除疳**同猪肚蒸为丸，**杀蚘**。蚘得苦则伏，**虚寒为病者禁用**。久服黄连、苦参反热，从火化也。昂按：炎上作苦，味苦必燥，燥则热矣。且苦寒沉阴肃杀，伐伤生和之气也。韩愗曰：黄连与肉桂同行，能交心肾于顷刻。时珍曰:治痢用香连丸；姜连丸用黄连、干姜；姜黄散用黄连、生姜;左金丸用黄连、吴茱萸。治口疮用黄连细辛；止下血用黄连大蒜。一阴一阳，寒因热用，热因寒用，最得制方之妙。**出宣州者粗肥，出四川者瘦小。状类鹰爪连珠者良，去毛。治心火生用，虚火醋炒,肝胆火猪胆汁炒，上焦火酒炒，**有吞酸嘈杂等证，亦有吐酸者名酢心，宜黄连吴茱萸降火开郁。酢，音醋。**中焦火姜汁炒，下焦火盐水或童便炒，食积火黄土炒，治湿热胃在气分，吴茱萸汤炒，在血分干漆水炒，点眼赤人乳浸**。时珍曰：诸法不独为之引导，盖辛热制其寒苦，咸寒制其燥性，用者详之。**黃芩、龙骨为使，恶菊花、玄参、僵蚕、白鲜皮，畏款冬、牛膝，忌猪肉**，时珍曰： 方有脏连丸，黄连猪肚丸，岂忌肉而不忌脏腑乎。**杀乌头，巴豆毒**。黄连泻心火，佐以龙胆泻肝胆火，白芍泻脾火，石膏泻胃火，知母泻肾火，黄柏泻膀胱火，木通泻小肠火。黄芩泻肺火，栀子佐之；泻大肠火，黄连佐之；柴胡泻肝胆火，.黄连佐之，泻三焦火，黄芩佐之。郑奠一曰：热郁恶心，兀兀欲吐黄连数分甚效。
 
 【讲解】（1）伏梁：古病名。指脘腹部痞满或有肿块的一类疾患。（2）胎毒：小儿在胎育期间，禀受母体内蕴之毒邪，出生后发病者称之为胎毒。   
 
