update ok/wk/wk02.md. 1.原文有“但以气郁血瘀所玫者为多”，应为“但以气郁血瘀所致者为多”，电子版已改。 2.原文有“如白疮等”，应为“如白疕等”，电子版已改。 3.原文有“则多风邪”，应为“则多挟风邪”，电子版已改。 4.原文有“同为脘病”，应为“同为䐔病”，电子版已改。

--- a/ok/wk/wk02.md
+++ b/ok/wk/wk02.md
@@ -70,7 +70,7 @@
 
 二、内因
 
-由于恣意六欲或七情郁结，均能发生外科疾病，但以气郁血瘀所玫者为多。
+由于恣意六欲或七情郁结，均能发生外科疾病，但以气郁血瘀所致者为多。
 
 （一）气病
 
@@ -80,7 +80,7 @@
 
 2.气滞：人身之气，聚则有形，散而无迹，腹内气机阻滞，则阵发疼痛，攻痛无常，如疝气、部分腹内痈肿等。
 
-3.气逆：胃气以降为顺，以升为逆，如果外邪滞留肠胃，胃气不能正常下行，则逆而上冲，症见腹痛，恶心，呕吐，不食，如肠结等。
+3.气逆：胃气以降为顺，以升为逆，如果外邪滞留肠胃，胃气不能正常下行，则逆而上冲，症见腹痛、恶心、呕吐、不食，如肠结等。
 
 4.气虚：气为全身之动力，以保证人体各器官的正常功能。若卫气不足则自汗，正气不足则皮肌萎缩，全身乏力；脾气不足，可致气虚下陷，常引起肛肠脱垂，形成痔疮、脱肛等疾病。
 
@@ -90,15 +90,15 @@
 
 寒凝血瘀：“寒则血凝涩’’。寒邪留滞为血瘀的主要因，如前所述寒在筋脉等。
 
-气滞血瘀：气滞血疲，痛有常所，往来不离其处，其痛如刺，拒按；时发寒热，脉涩，舌质可见瘀斑、瘀点等。血瘀于肌表则为青紫肿痛、结节斑块，色素沉着，皮肤肥厚/如一般软组织损伤、结节性红斑等。血阻于营卫则郁而生热，红肿热痛，成脓破溃，如痈、疽等病。血瘀于脏腑则腹痛、便血，或发寒热，如肠痈脓肿等。
+气滞血瘀：气滞血疲，痛有常所，往来不离其处，其痛如刺，拒按，时发寒热，脉涩，舌质可见瘀斑、瘀点等。血瘀于肌表则为青紫肿痛、结节斑块，色素沉着，皮肤肥厚，如一般软组织损伤、结节性红斑等。血阻于营卫则郁而生热，红肿热痛，成脓破溃，如痈、疽等病。血瘀于脏腑则腹痛、便血，或发寒热，如肠痈脓肿等。
 
-血虚：血虚肌肤失养，则干燥，皲裂、脱屑、作痒、如白疮等。肠道血虚津枯，则往往引起大便秘结。
+血虚：血虚肌肤失养，则干燥、皲裂、脱屑、作痒、如白疮等。肠道血虚津枯，则往往引起大便秘结。
 
 （三）食
 
 食滞肠胃，或由素体脾胃阳虚，或因暴饮暴食而致宿食不化，症见腹痛，腹胀，烦闷不宁，恶心呕吐，嗳腐吞酸，胃脘高突，大便秘结，脉滑实，苔厚腻。
 
-"膏梁厚味，足生大丁。”饮食不节，恣食甘肥滋腻和辛辣刺激之品，可使脾胃受损，湿热火毒内生，从而发为痈疽。
+"膏梁厚味，足生大丁”。饮食不节，恣食甘肥滋腻和辛辣刺激之品，可使脾胃受损，湿热火毒内生，从而发为痈疽。
 
 （四）肝肾不足
 
@@ -112,7 +112,7 @@
 
 1.六淫致病与季节有一定关系：因时邪偏胜，袭於肌肤筋骨，即发外疡，而六气分属四季，如春天风淫所胜，则易生头面疮疡，痄腮时毒。长夏湿盛，骄阳酷烈，暑湿热交蒸，易发暑疖、暑湿流注以及其它脓肿。冬令严寒所胜，气滞血凝，易发冻疮。所以，审证求因之时，应该注意时令，考虑气候变化对人体的影响。
 
-2.外疡发病原因与发病部位有一定的关系：古人谓“头面肿为风”、“脚肿为湿"，确属经验之谈。发于人体上部（头、面，肩、项等处）的疮疡，如时毒、发颐、牙周炎、骨槽风等多为风温、风热所致；发于人体中部（胸、腹、腰、背）之外疡，如乳痈，胁疽等，多因气郁、火郁所引起；发于人体下部（臀、腿、胫、足）之外疡，如臁疮等，多由湿热或寒湿所致。又如同一种疾病，生于不同部位，其病因也不尽相同。如丹毒发于头面，则多风邪；发于两胁，虚肿红热者，多兼气郁；发于股胫者，则多兼湿邪，治法亦各异。又如，同为脘病，发于胸胁者多兼气郁，发于下肢者多为湿盛。这是一般规律，在诊断时还需四诊合参，才能更加准确，但如果忽略发病部位的重要意义，治疗就不会取得预期的效果。以上病因可以单独致病，也可以几种病因同时致病，甚至同一病人、同一疾病，在不同阶段，病因不同。如同一个石淋患者，在结石固定不移时，其病因可能是气滞血瘀；在结石移动时，其病因则可能是湿热下注。所以医者临床时，必须综合局部症状与全身症状进行全面的分析，才能审证求因。
+2.外疡发病原因与发病部位有一定的关系：古人谓“头面肿为风”、“脚肿为湿"，确属经验之谈。发于人体上部（头、面、肩、项等处）的疮疡，如时毒、发颐、牙周炎、骨槽风等多为风温、风热所致；发于人体中部（胸、腹、腰、背）之外疡，如乳痈、胁疽等，多因气郁、火郁所引起；发于人体下部（臀、腿、胫、足）之外疡，如臁疮等，多由湿热或寒湿所致。又如同一种疾病，生于不同部位，其病因也不尽相同。如丹毒发于头面，则多挟风邪；发于两胁，虚肿红热者，多兼气郁；发于股胫者，则多兼湿邪，治法亦各异。又如，同为䐔病，发于胸胁者多兼气郁，发于下肢者多为湿盛。这是一般规律，在诊断时还需四诊合参，才能更加准确，但如果忽略发病部位的重要意义，治疗就不会取得预期的效果。以上病因可以单独致病，也可以几种病因同时致病，甚至同一病人、同一疾病，在不同阶段，病因不同。如同一个石淋患者，在结石固定不移时，其病因可能是气滞血瘀；在结石移动时，其病因则可能是湿热下注。所以医者临床时，必须综合局部症状与全身症状进行全面的分析，才能审证求因。
 
 ## 第二节 发病机理
 
