update ok/fjx/fjx01-0.4.0.0.0.md. 荆芥〈10克） 〈改为（ 即不合拍“ “改为”

--- a/ok/fjx/fjx01-0.4.0.0.0.md
+++ b/ok/fjx/fjx01-0.4.0.0.0.md
@@ -1,6 +1,6 @@
 ## 荆防败毒散《摄生众妙方》
 
-〔组成〕荆芥〈10克） 防风（10克） 羌活（10克） 独活（10克）柴胡（10克） 前胡（10克） 枳壳（10克） 茯苓（10克） 桔梗（6克） 川芎各一钱五分（6克） 甘草五分（3克）
+〔组成〕荆芥（10克） 防风（10克） 羌活（10克） 独活（10克）柴胡（10克） 前胡（10克） 枳壳（10克） 茯苓（10克） 桔梗（6克） 川芎各一钱五分（6克） 甘草五分（3克）
 
 〔煎服法〕为末，每服二钱。（水煎服）
 
@@ -14,6 +14,6 @@
 
 本方证与麻黄汤证有同有异，两方均有恶寒发热、头痛无汗等表寒见证，然本方证为风邪挟湿出现肢体重痛，麻黄汤证为风寒身疼，本方证为肺气郁而咳嗽有痰，麻黄汤证为肺气不宣而喘。
 
-本方去荆芥、防风加人参为人参败毒散（《小儿药证直诀》），主治外感风寒湿邪而兼气虚者，有扶正达邪之效。本方还治下痢初起而有表证者。痢疾兼表为邪从表而陷里之象，以本方疏散表邪，表气疏通，里滞也除，其痢自愈。邪从外入者，仍从外出，使由里而出表，古人称此为“逆流挽舟”法。吴鞠通认为“此方在风湿门中，用处甚多，若湿不兼风而兼热者，即不合拍“，此言十分中肯。败毒散与清瘟败毒饮（《疫疹一得》）虽同名“败毒”但所适应之病因病证不同，使用也就有别。败毒散治饮食起居不节，饥谨兵荒之年，正虚外感风寒湿邪；清瘟败毒饮治暑热疫外感温热者。清瘟败毒饮之组成为：生石膏、小生地、乌犀角、真川连、栀子、桔梗、黄芩、知母、赤芍、玄参、连翘、甘草、丹皮、鲜竹叶。此方为大寒解毒之剂，专治一切火热，表里俱热，狂躁烦心，口干咽痛，大热干呕，错语不眠，吐血衄血，热甚发斑诸证。
+本方去荆芥、防风加人参为人参败毒散（《小儿药证直诀》），主治外感风寒湿邪而兼气虚者，有扶正达邪之效。本方还治下痢初起而有表证者。痢疾兼表为邪从表而陷里之象，以本方疏散表邪，表气疏通，里滞也除，其痢自愈。邪从外入者，仍从外出，使由里而出表，古人称此为“逆流挽舟”法。吴鞠通认为“此方在风湿门中，用处甚多，若湿不兼风而兼热者，即不合拍”，此言十分中肯。败毒散与清瘟败毒饮（《疫疹一得》）虽同名“败毒”但所适应之病因病证不同，使用也就有别。败毒散治饮食起居不节，饥谨兵荒之年，正虚外感风寒湿邪；清瘟败毒饮治暑热疫外感温热者。清瘟败毒饮之组成为：生石膏、小生地、乌犀角、真川连、栀子、桔梗、黄芩、知母、赤芍、玄参、连翘、甘草、丹皮、鲜竹叶。此方为大寒解毒之剂，专治一切火热，表里俱热，狂躁烦心，口干咽痛，大热干呕，错语不眠，吐血衄血，热甚发斑诸证。
 
 〔方论选录〕吴鞠通说：“暑湿风寒杂感，寒热迭作，表证正盛，里证复急，腹不和而滞下者，活人败毒散主之。此证乃内伤水谷之酿湿，外受时令之风湿，中气本自不足之人，又气为湿伤，内外俱急。立方之法，以人参为君，坐镇中州，为督战之帅，以二活、二胡合芎䓖从半表半里之际，领邪外出，喻氏所谓逆流挽舟者此也；以枳壳宣中焦之气，茯苓渗中焦之湿，以桔梗开肺与大肠之痹，甘草和合诸药，乃陷者举之之法，不治痢而治致痢之源。痢之初起，憎寒壮热者，非此不可也。”（《温病条辨》）
