update ok/fjx/fjx01-0.2.0.0.0.md. 取麻黄不去节, ,改为， 本方去桂枝、杏仁，名甘草麻黄汤 此处应另起一段

--- a/ok/fjx/fjx01-0.2.0.0.0.md
+++ b/ok/fjx/fjx01-0.2.0.0.0.md
@@ -20,7 +20,7 @@
 
 从本方衍生出的方剂甚多，但不外宣肺平喘、表散风寒和通利水湿三大类。其中宣肺平喘多以麻黄、杏仁相配，如本方去桂枝，改用生石膏则名麻杏石甘汤，系主治邪热壅肺喘咳之名方。方中麻杏宣肺降逆以平喘，重用生石膏以制麻杏之温，能减弱麻黄发汗之力，充分发挥其宣肺降逆之功，变辛温方剂而为辛凉宣肺、清热平喘之方。有汗时麻黄用量为石膏的1/10，如无汗时则麻黄与石膏可为1：3之比。石膏宜生用又宜先煎后下诸药，便溏者，可加山药、鲜芦根。
 
-如表寒不甚可去桂枝，取麻黄不去节,则不偏于发汗而长于定喘，杏仁不去皮尖，则偏于达表定喘，因留尖取其发，连皮则行表，甘草不炙则偏于调和诸药又有解毒之效。加生姜五片则名三拗汤。主治风寒外感咳嗽鼻塞或哮喘。该方不用桂枝，则发汗解表作用逊于麻黄汤，其发中有收、补中有清，重点在宣肺平喘止咳。
+如表寒不甚可去桂枝，取麻黄不去节，则不偏于发汗而长于定喘，杏仁不去皮尖，则偏于达表定喘，因留尖取其发，连皮则行表，甘草不炙则偏于调和诸药又有解毒之效。加生姜五片则名三拗汤。主治风寒外感咳嗽鼻塞或哮喘。该方不用桂枝，则发汗解表作用逊于麻黄汤，其发中有收、补中有清，重点在宣肺平喘止咳。
 
 表散风寒多以麻桂相配，以调和营卫，个别方剂，以麻黄、附子相配。如本方倍用麻黄、炙甘草，加生石膏、生姜、大枣，名大青龙汤。系主治表寒郁甚兼里热烦躁者。具解表清里之效。
 
@@ -31,6 +31,7 @@
 欲利水可取麻黄与石膏相配，如本方去桂枝，杏仁加生石膏、生姜、大枣，名越婢汤。主治风水证，身热或无大热，汗出或无汗，恶风，或渴，一身悉肿，尤以上半身肿甚，脉浮者，该方重用麻黄宣降肺气，通调水道以利水消肿。又重用石膏以约制麻黄之发汗，全方共具宣肺泄热，利水消肿之功。临床用治急性肾炎高度浮肿有效。
 
 本方去桂枝、杏仁，加附子，名麻黄附子汤，主治正水而表亦有水气，周身水肿，脉沉小者，本方属温经发汗之剂。
+
 本方去桂枝、杏仁，名甘草麻黄汤，主治皮水，水气郁表，一身面目黄肿，无汗，口不渴，小便不利，内无热而表实者。本方为宣肺行水之剂。
 
 〔方论选录〕张秉成：“治寒伤太阳之表，过卫入营，血脉凝敛，无汗恶寒，发热身疼，头项强痛，脉浮而紧等证。麻黄辛温，中空外达，善行肌表卫分，为发汗之速药；桂枝辛温发散，色赤入营，协同麻黄入营分，解散寒邪，随麻黄而出卫，汗之即已。然寒主凝敛，表既壅遏，则里气不舒，故太阳伤寒表不解者，每见喘促上气等证。肺主一身之气，下行为顺，上行为逆。杏仁入肺，苦温能降，辛温能散，用之为佐，以助麻黄之不逮。又恐麻桂之性猛，以致汗多亡阳，故必监以甘草之甘缓，济其直径无前之势，庶可邪解而正不伤，乃为立方之善耳。”（《成方便读》）
